Updated locales with new https://crowdin.com/project/spt-translation data

--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/hu.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/hu.json
@@ -69,6 +69,7 @@
   "fence-unable_to_find_assort_by_id": "Nem található meg Fence választéka a következő azonosítóhoz: %s",
   "fence-unable_to_find_offer_by_id": "Nem sikerült megtalálni az eltávolítandó ajánlatot a következő azonosítóval: %s",
   "fence-unable_to_get_ammo_penetration_value": "Nem találhatóak penetrációs értékek a következő lőszerhez: %s, nem sikerült megnézni hogy a penetrációs limit felett van-e, hamis érték feltételezve",
+  "fixer-mod_item_found": "Tétel: %s találtunk a profilban, viszont nem létezik az adatbázisban. HIBÁKAT fogsz tapasztalni, ami egy régi, használt mod eltávolítása miatt történhetett. A tételek törlése nélkül NE HASZNÁLD EZT A PROFILT. Nyisd meg a SPT_Data\\Server\\configs\\core.json fájlt, módosítsd a 'removeModItemsFromProfile' részt \"true\"-ra. Így használni tudod a profilod, és remélhetőleg eltávolít minden hibás tételt",
   "fixer-updated_pockets": "Frissített 'pocket' tárgy az új, 18876-os verzióra, amely x3 speciális slotot tartalmaz",
   "gameevent-bot_not_found": "addEventGearToScavs() - nem találja a %s típusú botot az adatbázisban, kihagyás",
   "gameevent-no_gear_data": "A seasonalevents.json konfigban nincsenek felszerelés adatok a következő eseményhez %s",
@@ -96,7 +97,10 @@
   "inraid-unable_to_deliver_item_no_trader_found": "Nem sikerült a tárgy kézbesítése mivel %s tradernek nincs dialógus adata",
   "inraid-unable_to_find_key_in_taskconditioncounters": "Nem sikerült megtalálni a következő kulcsot: %s a TaskConditionCounters raid előtti adatban",
   "inraid-unable_to_migrate_pmc_quest_not_found_in_profile": "Nem sikerült migrálni a következő raid utáni quest adatokat a profilba: %s, mivel nem található a quest a profilban",
+  "insurance-item_not_found_in_post_raid_data": "Nem sikerült megtalálni a biztosított leltárelemet a következő azonosítóval: %s a post-raid adatokban",
   "insurance-missing_insurance_price_multiplier": "Nincs biztosítási szorzót a kereskedőhöz: %s, ellenőrizd, hogy létezik-e az InsuranceConfig.js fájlban, most visszaáll az alapértelmezett értékre: 0.3",
+  "insurance-post_raid_item_not_found": "Biztosított tétel: %s nem található a raid utáni leltárban",
+  "insurance-pre_raid_item_not_found": "Raid előtti leltári tétel: %s Nem található",
   "inventory-edit_trader_item": "Nem lehet szerkeszteni egy kereskedő tárgyát",
   "inventory-examine_item_does_not_exist": "examineItem() - Nincs találat az %s azonosítóra",
   "inventory-fill_container_failed": "fillContainerMapWithItem() hibával tért vissza %s",
@@ -117,6 +121,9 @@
   "inventory-unable_to_fit_item_into_inventory": "Nem sikerült belehelyezni a következő tárgyat a leltárba: %s mivel nem fér bele",
   "inventory-unable_to_fold_item_not_found_in_inventory": "Nem sikerült összehajtani a tárgyat a következő azonosítóval: %s. Nem található a játékos leltárában",
   "inventory-unable_to_inspect_item_not_in_db": "Nem sikerült megtekinteni a következő tárgyat: %s mivel nem található a tárgy adatbázisban",
+  "inventory-unable_to_remove_item_id_not_found": "Nem sikerült eltávolítani a {{childId}}-t a profilból: {{profileId}}, mivel nem található",
+  "inventory-unable_to_remove_item_no_id_given": "Nem lehet elemet eltávolítani, mivel nincs itemId megadva",
+  "inventory-unable_to_remove_item_restart_immediately": "Az elem eltávolítása nem lehetséges: {{item}} a levélből: {{mailId}}, mivel az elemet nem találták meg, AZ ADATOK SÉRÜLÉSE ELKERÜLÉSE ÉRDEKÉBEN AZONNAL INDÍTSA ÚJRA A JÁTÉKOT",
   "inventory-unable_to_sort_inventory_restart_game": "Nem sikerült megtalálni a következő tárgyat a leltárban: %s az automatikus sorbarendezéshez, AZONNAL TÖLTSD ÚJRA A JÁTÉKOT A PROFIL KORRUPTÁLÓDÁS ELKERÜLÉSÉHEZ",
   "inventory-unable_to_toggle_item_not_found": "A következő azonosítójú készletelemet nem lehet váltani: %s, a tétel nem található",
   "item-durability_value_invalid_use_default": "getRepairableItemQualityValue() fegyver tpl: %s tartóssági érték érvénytelen, visszaállítás alapértelmezett értékre: 1",
@@ -167,8 +174,6 @@
   "modloader-error_parsing_mod_load_order": "Hiba a mod betöltési sorrendjének elemzésekor",
   "modloader-incompatibilities_not_string_array": "A Mod %s package.json „incompatibilities” tulajdonságának karakterlánc tömbnek kell lennie",
   "modloader-incompatible_mod_found": "{{author}}-{{name}} mod nem kompatibilis a következővel: {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "A segédprogramok telepítése a következőhö modhoz: {{name}}, {{author}} által készítve",
-  "modloader-installing_external_dependencies_disabled": "A(z) {{name}} mod, melyet {{author}} készített, külső függőségeket igényel, de ez a funkció jelenleg ki van kapcsolva. Lépj a(z) \"{{configPath}}\" helyre, állítsd a(z) \"{{configOption}}\" értékét igazra (true), és indítsd újra a szervert.\nEnnek engedélyezésével elfogadod minden felelősséget amiért a(z) {{name}} letölt a gépedre.",
   "modloader-invalid_version_property": "A(z) %s mod package.json fájlja érvénytelen verziójú karakterláncot tartalmaz",
   "modloader-is_client_mod": "A következő mod (%s) egy kliens mod és a következő mappába kell helyezni: /spt/bepinex/plugins",
   "modloader-load_order_conflict": "`{{modOneName}}` és`{{modTwoName}}` modoknak ellentmondásos betöltési sorrend követelményei vannak, a szerver nem tud elindulni amíg ezt nem javítják, és leáll",
@@ -549,9 +554,7 @@
   "quest-handover_wrong_item": "Nem sikerült leadni a {{questId}} küldetéshez tartozó tárgyat, elvárt tpl: {{requiredTpl}}, de leadva: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() A _id: %s azonosítóval rendelkező elem nem található a készletben",
   "quest-no_skill_found": "%s képesség nem található",
-  "quest-reward_type_not_handled": "A küldetés jutalom típusa: {{rewardType}} nem kezelt küldetés: {{questId}} név: {{questName}}",
   "quest-unable_to_find_compare_condition": "Nem felismert összehasonlítási módszer: %s",
-  "quest-unable_to_find_matching_hideout_production": "Nem találtam megfelelő receptet a rejtekhelyen a küldetéshez: {{questName}}, találatok: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Quest a következő id-vel: {{questId}} a következő típussal: {{questType}} nem található az adatbázisban",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Nem sikerült a %s questet megtalálni az adatbázisban, így nem lehetséges jutalmat adni a játékosnak",
   "quest-unable_to_find_trader_in_profile": "Nem sikerült %s Tradert megtalálni a profilban",
@@ -584,7 +587,9 @@
   "release-plugins-loaded-debug-message": "Kliens modok betöltve",
   "release-server-mods-debug-message": "Szerver modok betöltve",
   "release-server-mods-loaded": "Egy vagy több szerver mod található egy modokat engedélyező buildben, a jelentések érvénytelenek lesznek, amíg el nem távolítják őket. A problémák újbóli jelentéséhez tekintsd meg a szerver elején, hogy melyik betöltött modokat kell eltávolítani.",
+  "repair-item_not_found_unable_to_repair": "Tétel: %s nem található a leltárban. Nem lehet megjavítani",
   "repair-unable_to_find_item_in_db": "Nem lehet javítani a tárgyat: %s, nem található az adatbázisban, nem lehet javítási képességpontokat hozzáadni",
+  "repair-unable_to_find_item_in_inventory_cant_repair": "Nem találja az elemet: %s nem tudja javítani a tárgyat",
   "repeatable-accepted_repeatable_quest_not_found_in_active_quests": "Elfogadtál egy ismételhető küldetést: %s, amely nem található az activeQuests tömbben. Kérjük, jelentsd ezt a hibát",
   "repeatable-completion_quest_whitelist_too_small_or_blacklist_too_restrictive": "Befejezési küldetés generálása: Nincsenek tételek. Vagy az engedélyezőlista túl kicsi, vagy a tiltólista túl korlátozó",
   "repeatable-difficulty_was_nan": "Ismételhető jutalom generálása: A nehézség értéke NaN. Beállítás 1-re.",
@@ -625,17 +630,22 @@
   "server_start_meme_8": "its morbin time",
   "server_start_meme_9": "S-step scav? M-mit csinálsz?",
   "server_start_player_active_botreload_skill": "A karaktereden aktíválva van a 'BotReload' képesség, ami miatt a fegyvereid természetellenesen gyorsan fognak újratölteni. Ha ez szándékos, hagyd figyelmen kívül ezt az üzenetet",
-  "server_start_success": "Jó játékot",
   "started_webserver_success": "Webkiszolgáló elindítva itt: %s",
+  "weightedrandomhelper-supplied_data_doesnt_match": "WeightedRandom() {{itemCount}} elemeket és {{weightCount}} súlyokat kapott, nem tudott véletlenszerű súlyt választani.",
   "trader-missing_durability_threshold_value": "Nem található élettartam küszöbérték a kereskedőhöz: {{traderId}}, visszaállás az alapértelmezett értékre: {{value}}",
   "trader-missing_repair_property_using_default": "Trader: {{traderId}} {{nickname}} nem tartalmaz \"repair\" objektumot, alapértékre állítva",
   "trader-missing_repair_quality_property_using_default": "Trader: {{traderId}} {{nickname}} nem tartalmaz \"repair quality\" tulajdonságot, alapértékre állítva",
   "trader-missing_trader_details_using_default_refresh_time": "Kereskedő: {{traderId}} nem található, ideiglenes bejegyzés létrehozása alapértelmezett frissítési idővel: {{updateTime}}",
   "trader-price_multipler_is_zero_use_default": "traderPriceMultipler 0 volt, ez érvénytelen, 0.01-re állítva",
   "trader-unable_to_delete_stale_purchases": "Nem lehet feldolgozni a kereskedői vásárlásokat a profilban: {{profileId}}, mivel a kereskedő: {{traderId}} nem található, kihagyás",
+  "trader-unable_to_find_profile_by_id": "Nem sikerült megtalálni a következő azonosítóval rendelkező profilt: %s",
   "trader-unable_to_find_profile_with_id": "Nem sikerült profilt találni a következő munkamenet azonosítóval: %s",
   "trader-unable_to_find_trader_by_id": "Nem sikerült Tradert találni a következő azonosítóval: %s",
   "trader-unable_to_find_trader_in_enum": "Nem sikerült megtalálni a következő Tradert a Traders enum-ban: %s",
+  "trader-unable_to_purchase_item_limit_reached": "Nem lehetséges terméket vásárolni a kereskedőtől: {{traderId}}, mivel a vásárlási limitjét: {{limit}} elérte",
+  "trader-unable_to_find_selltotrader_counter": "Nem található [sellToTrader] számláló: %s küldetés az adatbázisban, a számláló nem fog növekedni.",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "Nem sikerült megtalálni a leltárelemet: %s nem lehet növelni a számlálót, kihagyva",
+  "trader-unable_to_add_custom_trader": "Egyéni kereskedő hozzáadása nem lehetséges: {{traderId}}, {{stackTrace}}",
   "unhandled_response": "[Nem kezelt][%s]",
   "unknown_request": "Ismeretlen kérés!",
   "validation_error_decode": "Nem sikerült dekódolni a checks.dat fájlt. Fájl hitelesítése kihagyva.",
@@ -646,6 +656,7 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "NE JELENTSD",
   "watermark-free_of_charge": "Ez a munka ingyenes",
+  "watermark-issue_tracker_url": "https://github.com/sp-tarkov/server/",
   "watermark-modding_disabled": "Ez a verzió nem támogatja a szerver moddolást",
   "watermark-no_support": "Nem adunk semmilyen segítséget",
   "watermark-not_an_issue": "EZ NEM PROBLÉMA",
@@ -657,8 +668,16 @@
   "websocket-message_sent": "[WS] üzenet elküldve",
   "websocket-not_ready_message_not_sent": "[WS] A socket nem áll készen a %s-re, az üzenet nem lett elküldve",
   "websocket-pinging_player": "[WS] Játékos pingelése: %s",
-  "websocket-player_connected": "[WS] Játékos: {{sessionId}} {{contextId}} csatlakozott",
+  "websocket-player_connected": "[WS] Player: {{sessionId}} {{contextId}} csatlakozott",
+  "websocket-player_reconnect": "[WS] Játékos: {{sessionId}} {{contextId}} újrakapcsolódás sikeres, előző aktív socket bezárása",
   "websocket-received_message": "[WS] Üzenet érkezett %s felhasználótól ",
   "websocket-socket_lost_deleting_handle": "[WS] Kapcsolat megszakadt, kezelő törlése",
-  "websocket-started": "Websocket elindítva ekkor: %s"
+  "websocket-started": "Websocket elindítva ekkor: %s",
+  "chatbot-cannot_accept_any_more_of_gift": "Nem fogadhatsz el többet ebből az ajándékból",
+  "chatbot-forced_event_enabled": "%s esemény engedélyezve lett, indítsd újra a játékklienst a raid megkezdése előtt.",
+  "chatbot-added_stash_rows_please_restart": "Hozzáadtunk 2 sort a relytekhelyhez, kérjük, indítsd újra a játékot, hogy láthasd őket.",
+  "chatbot-snow_enabled": "A hó minden további raidnél engedélyezve van, amíg a szerver újra nem indul.",
+  "chatbot-summer_enabled": "A nyári idő engedélyezve lett az összes következő raidre, amíg a szerver újra nem indul.",
+  "chatbot-command_was_empty": "A beírt parancs üres volt, nem lehetséges feldolgozni.",
+  "webserver_already_running": "A webkiszolgáló egy másik példánya már fut. Kérjük, állítsa le, mielőtt egy újat indítana."
 }
