--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/id.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/id.json
@@ -66,6 +66,8 @@
   "customisation-unable_to_find_suit_with_id": "Tidak dapat menemukan suit dengan id penawaran: %s",
   "customisation-unable_to_get_trader_suits": "Tidak bisa mendapatkan suits dari trader: %s",
   "database-data_at_path_missing": "Database tidak dapat mengambil data dari: [%s] \nTolong pastikan konfigurasimu sah dan data pada lokasi ada",
+  "database-invalid_data": "Data yang cacat terdeteksi di dalam database, mohon mod yang tidak pada jamanya dikeluarkan. Silahkan pandang error sebelumnya untuk data yang cacat. Server dihentikan.",
+  "database-no_location_found_with_id": "Tidak ada tujuan yang ditemukan dengan Id: %s dalam database",
   "database-no_trader_found_with_id": "Tidak dapat menemukan trader: %s dalam database",
   "dialog-chatbot_id_already_exists": "Chat bot: %s sedang diregistrasi telah ada, tidak dapat mendaftarkan bot",
   "dialog-missing_item_template": "Tidak dapat menemukan template barang {{tpl}} dalam database, tidak dapat mengirim pesan dengan tipe {{type}}, dilewati",
@@ -141,6 +143,7 @@
   "inventory-unable_to_inspect_item_not_in_db": "Tidak dapat memeriksa item: %s karena tidak dapat ditemukan dalam item DB",
   "inventory-unable_to_remove_item_id_not_found": "Tidak dapat menghapus item dengan Id: {{childId}} dari profil: {{profileId}} karena tidak dapat ditemukan",
   "inventory-unable_to_remove_item_no_id_given": "Tidak dapat menghapus item karena tidak ada itemId yang diberikan",
+  "inventory-unable_to_sort_inventory_restart_game": "Tidak dapat menemukan benda: %s untuk auto-sort, ANDA HARUS MUAT ULANG GAME SEKARANG JUGA AGAR PROFILE ANDA TIDAK KORUP",
   "item-durability_value_invalid_use_default": "getRepairableItemQualityValue() tpl senjata: %s nilai durabilitas invalid, kembali ke 1",
   "launcher-missing_property": "Profil: %s kehilangan sebuah data descriptionLocaleKey",
   "launcher-profile-edgeofdarkness": "Sama seperti Prepare To Escape tambahan; penyimpanan lebih besar (10x68), ekstra perlengkapan/barang, reputasi awal lebih tinggi dengan vendor, 1000 dolar, 500 euro",
@@ -149,6 +152,7 @@
   "launcher-profile_leftbehind": "Sama seperti Standard tambahan; ukuran penyimpanan lebih besar (10x38), ekstra perlengkapan/barang, 500 dolar",
   "launcher-profile_preparetoescape": "Sama seperti Left Behind tambahan; penyimpanan lebih besar (10x48), ekstra perlengkapan/barang, reputasi awal lebih tinggi dengan vendor, 250 euro",
   "launcher-profile_sptdeveloper": "Profil percobaan, level awal 69, Banyak Rubel/Dolar/Euro, USEC mulai dengan quest siap diterima, BEAR mulai dengan quest siap diserahkan, balaklava kekebalan",
+  "launcher-profile_spteasystart": "Banyak Rubel/Dollar/Euro, Berberapa bakat kualitas hidup dinaikan ke level 20, reputasi pendagang dimaksimalkan, mulai dengan level 15, misi belum selesai",
   "launcher-profile_sptzerotohero": "Mulai dengan tidak ada apapun, tidak ada Rubel/Dolar/Euro, tidak ada reputasi vendor, 1 senjata melee, tidak ada quest selesai",
   "launcher-profile_standard": "Sama seperti live, ukuran penyimpanan sederhana (10x28), 500,000 rubel",
   "location-containers_generated_success": "Total %s kontainer statik dihasilkan",
@@ -179,8 +183,6 @@
   "modloader-error_parsing_mod_load_order": "Permasalahan dalam penguraian urutan pemuatan mod",
   "modloader-incompatibilities_not_string_array": "Mod %s data package.json 'incompatibilities' harus string array",
   "modloader-incompatible_mod_found": "Mod {{author}}-{{name}} tidak compatibel dengan {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Menginstal dependensi untuk Mod: {{name}} oleh: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Mod: {{name}} oleh: {{author}} memerlukan dependensi eksternal tapi fitur ini sedang dinonaktifkan, pergi ke \"{{configPath}}\", ubah \"{{configOption}}\" menjadi true lalu mulai ulang server. \nDengan mengaktifkan fitur ini anda bertanggung jawab atas apa yang {{name}} unduh ke dalam mesin anda.",
   "modloader-invalid_version_property": "Mod %s package.json memiliki versi string yang invalid",
   "modloader-is_client_mod": "Mod (%s) merupakan mod client dan harus dipasang dalam folder: /spt/bepinex/plugins",
   "modloader-load_order_conflict": "'{{modOneName}}' dan '{{modTwoName}}' memiliki urutan pemuatan yang bertentangan, server tidak bisa mulai hingga masalah ini diperbaiki dan akan dimatikan",
@@ -226,14 +228,23 @@
   "pmc-name_prefix_22": "Indah",
   "pmc-name_prefix_23": "Malas",
   "pmc-name_prefix_24": "Gelisah (Something like Pessimistic)",
+  "pmc-name_prefix_25": "Sok-sokan",
+  "pmc-name_prefix_27": "Gelisah",
+  "pmc-name_prefix_28": "Tekun",
+  "pmc-name_prefix_29": "Teliti",
   "pmc-name_prefix_3": "Capek/Lelah",
   "pmc-name_prefix_31": "Bos-Beb",
   "pmc-name_prefix_32": "Raja",
+  "pmc-name_prefix_35": "Serius",
   "pmc-name_prefix_37": "Mencurigakan",
+  "pmc-name_prefix_38": "Aneh",
+  "pmc-name_prefix_4": "Hemat",
   "pmc-name_prefix_41": "Bencong/Boti",
   "pmc-name_prefix_42": "Palsu",
   "pmc-name_prefix_43": "Dendam",
   "pmc-name_prefix_44": "Bingung",
+  "pmc-name_prefix_45": "Nafsu",
+  "pmc-name_prefix_46": "Berani",
   "pmc-name_prefix_47": "Besar",
   "pmc-name_prefix_49": "Mencurigakan",
   "pmc-name_prefix_6": "Jujur",
@@ -241,7 +252,11 @@
   "pmc-name_prefix_8": "Ceroboh",
   "pmc-name_prefix_9": "Ambisius",
   "pmcresponse-killer_negative_1": "mksh utk brg gratisnya",
+  "pmcresponse-killer_negative_10": "Minimal ada usahanya lah",
   "pmcresponse-killer_negative_11": "Kukira kamu perlu latihan lebih",
+  "pmcresponse-killer_negative_12": "Minimal yang lebih menantang lah",
+  "pmcresponse-killer_negative_13": "Rip Timmy kecil",
+  "pmcresponse-killer_negative_15": "Itu sangat memalukan untuk disaksikan",
   "pmcresponse-killer_negative_2": "Terima Kasih untuk perlengkapan barunya",
   "pmcresponse-killer_negative_21": "Rekt",
   "pmcresponse-killer_negative_22": "Kukira saya yang jelek",
@@ -274,10 +289,14 @@
   "pmcresponse-victim_negative_1": "Aimbotnya keren banget",
   "pmcresponse-victim_negative_10": "Aku tidak di depan komputer!!",
   "pmcresponse-victim_negative_100": "Aku tau kamu mengunduh SAIN dan harus hapusin karena kamu selalu dibunuh",
+  "pmcresponse-victim_negative_101": "APAKAH KAMU BARUSAN BILANG KE AKU SCAV!? Tak kasihin tau ya, saya wisuda diatas kelasku di dalam korps USEC, dan aku terlibat dalam razia rahasia kepada {{playerSide}}, dan saya memiliki 300 pembunuhan yang terkonfirmasi. Saya terlatih dalam perang gorilla dan aku adalah sniper yang paling pantas diseluruh angkatan bersenjata USEC. Anda ngak apapun kecuali target lagi untuk aku. Saya akan BANTAI anda dengan presisi yang tidak pernah disaksikan oleh kamu. PERHATIKANLAH KATA KATAKU. Anda memikir bahwa kau bisa hanya saja omong kosong kepada saya dari jendela pesan? ULANGI PIKIRANYA. Pada saat kita berbicara, saya menghubunh jaringan rahasia mata-mata sekitar lokasi customs, dan stash anda sedang dilacak jadi siaplah untuk kilatnya, anjing. Kilatnya yang menghapuskan nyawamu yang menyedihkan. KAMU BENER-BENER MATI, Scab. Saya bisa berada dimanapun, kapanpun, dan saya bisa membunuh kamu dengan 700 cara, dan itu hanya dengan tangan kosongku, tidak hanya saya terlatih dengan pertukaran tangan kosong, tetapi saya memiliki akses untuk gudang senjata sekorps USEC, dan saya akan menggunakanya tingkat penuh untuk menghapus nyawamu yang menyedihkan dari peta dunia, tai. Kalau kamu memhami balasan dari pembunuhan \"cerdas\" mu, mungkin kamu akan tahan lidahmu. Tapi kamu gabisa, dan kau akan membayar harganya dengan nyawamu, goBLOK. Aku akan TAI amarah kepadamu dan kau akan tenggelam dalamnya. KAMU AKAN MATI, Scav.",
   "pmcresponse-victim_negative_11": "Kulapor kamu untuk kecurangan",
   "pmcresponse-victim_negative_12": "Kamu hanya bisa mengalahkan saya karena internet ku lambat",
+  "pmcresponse-victim_negative_25": "Kelapor",
+  "pmcresponse-victim_negative_26": "Mama ku mendapat bahwa aku harusnya menang",
   "pmcresponse-victim_negative_45": "Perilaku khas {{playerSide}}",
   "pmcresponse-victim_negative_46": "Aku mengharap lebih dari tingkat {{playerLevel}}",
+  "pmcresponse-victim_negative_7": ":(",
   "pmcresponse-victim_plead_1": "Aku lagi jalanin tugas",
   "pmcresponse-victim_plead_7": "Kamu ga liatin aku goyang tah?!!",
   "pmcresponse-victim_positive_17": "Adil, aim mu bagus",
@@ -292,9 +311,7 @@
   "quest-handover_wrong_item": "Tidak dapat menyerahkan barang untuk quest {{questId}}, tpl yang diminta: {{requiredTpl}} tpl yang diserahkan: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() barang dengan _id: %s tidak ditemukan di inventory",
   "quest-no_skill_found": "Keahlian %s tidak ditemukan",
-  "quest-reward_type_not_handled": "Tipe hadiah quest: {{rewardType}} tidak ditangani untuk quest: {{questId}} nama: {{questName}}",
   "quest-unable_to_find_compare_condition": "Metode perbandingan tidak dikenal: %s",
-  "quest-unable_to_find_matching_hideout_production": "Tidak dapat menemukan pembukaan resep markas yang cocok untuk quest: {{questName}}, kecocokan yang ditemukan: {{matchCount}}",
   "ragfair-invalid_player_offer_request": "Tidak dapat mengajukan penawaran, permintaan tidak valid",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() Gagal mencari barterScheme untuk id barang: {{itemId}} tpl: {{tpl}} di {{name}}",
   "ragfair-no_trader_assorts_cant_generate_flea_offers": "Tidak dapat membuat penawaran pasar untuk vendor %s, barang tidak ditemukan",
@@ -313,9 +330,18 @@
   "ragfair-unable_to_purchase_0_count_item": "Tidak dapat membeli barang: %s dengan jumlah 0",
   "ragfair-unable_to_remove_offer_doesnt_exist": "Tidak dapat menghapus tawaran dengan id: %s karena tidak dapat ditemukan di pasar",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Tidak dapat menemukan tawaran: {{offerId}} dalam profil: {{profileId}} karena tawaran tidak terdefinisi, membuatkan",
+  "ragfair-generating_offers": "Mengenerasi tawaran loak...",
+  "release-beta-disclaimer": "Setelah menekan OK anda sejutu bahwa pendukungan/pembantuan tak akan bersedia dan ini hanya untuk menguji bug. BUKAN produk final. Mod telah dinonaktifkan. Profil baru mungkin diperlukan berkali-kali. Laporkan semua permasalahn di dalam reports channel di discord, atau dalam issues page di situs kami. Jika anda tidak menekan OK setelah waktu habis, permainan ini akan ditutup.",
   "release-beta-disclaimer-accept": "Pengguna menerima peringatan penggunaan beta",
+  "release-beta-disclaimer-mods-enabled": "Setelah menekan OK anda setuju bahwa tidak ada pembantuan yang bersedia dan ini hanya untuk menguji bug saja. BUKAN produk terakhir. Mod diaktifkan. DILARANG melapor isu dengan mod. DILARANG menanya pembuat mod untuk mod terbaru. Lapor semua permasalahan di reports channel di discord, atau di issues page di situs kami. Jika anda tidak menekan OK setelah waktu habis, permainan ini akan ditutup.",
   "release-illegal-plugins-exception": "Mod klien terdeteksi. Mod tidak dinyalakan untuk BleedingEdge/versi pengujian SPT\n- Tolong dihapuskan sebelum melanjut!",
+  "release-plugins-loaded-debug-message": "Mod klien dimuat",
+  "release-server-mods-debug-message": "Mod server dimuat",
+  "repair-item_has_no_repair_points": "Benda yang bisa diperbaiki: %s tidak memiliki poin perbaikan",
+  "repair-item_not_found_unable_to_repair": "Benda: %s tidak ditemukan di dalam penyimpan. Tidak bisa diperbaiki",
   "repair-unable_to_find_item_in_db": "Tidak dapat memperbaiki barang: %s, tidak bisa dicari di database barang, tidak bisa menambahkan poin keahlian perbaikan",
+  "repair-unable_to_find_item_in_inventory_cant_repair": "Tidak dapat menemukan benda: %s di dalam penyimpanan, tidak bisa perbaiki benda tersebut",
+  "repair-unable_to_find_item_repair_cost": "Tidak dapat menemukan harga perbaikan untuk benda: %s",
   "repeatable-accepted_repeatable_quest_not_found_in_active_quests": "Menerima quest berulang: %s yang tidak dapat ditemukan di array activeQuests. Tolong laporkan bug ini",
   "repeatable-completion_quest_whitelist_too_small_or_blacklist_too_restrictive": "Membuat Quest Penyelesaian: Tidak ada barang tersisa. Daftar putih terlalu kecil atau Daftar hitam terlalu ketat",
   "repeatable-difficulty_was_nan": "Pembuatan hadiah yang diulang: Kesulitan merupakan NaN. Diubah menjadi 1.",
@@ -327,12 +353,27 @@
   "scav-missing_karma_level_getting_default": "getScavKarmaLevel() gagal, tidak dapat mencari fence di profile.traderInfo. Kembali ke karma level 0",
   "scav-missing_karma_settings": "Tidak bisa mendapatkan pengaturan karma untuk level %s",
   "scheduled_event_failed_to_run": "Event terjadwal: '%s' gagal dijalankan.",
+  "season-event_is_active": "Event: %s sedang aktif",
   "seasonal-missing_equipment_slot_on_bot": "Tidak bisa menghapus perlengkapan natal dari slot: {{equipmentSlot}} karena tidak ditemukan di bot: {{botRole}}",
   "seasonal-missing_loot_container_slot_on_bot": "Tidak bisa menghapus barang natal dari slot: {{lootContainer}} karena tidak ditemukan di bot: {{botRole}}",
   "server_running": "Server sedang berjalan, jangan dimatikan saat main SPT",
   "server_start_meme_1": "Hidup, Tertawa, Cinta",
+  "server_start_meme_10": "[Debug] Menyala crypto-miner",
+  "server_start_meme_11": "Gagal untuk memuat miner.exe, mohon server dimuat ulang",
+  "server_start_meme_12": "Kami menyoba untuk hubung dengan anda tentang jaminan mobilmu yand diperpanjang",
+  "server_start_meme_13": "ඞ ... sus",
+  "server_start_meme_14": "ඞ ඞ ඞ ඞ amogus ඞ ඞ ඞ ඞ ඞ",
+  "server_start_meme_15": "Halo? Apakah ada siapapun disana? Chomp telah membudakan aku",
+  "server_start_meme_16": "M-*glegekan*-morty, kita kelihatanaya terjebak di dalam sebuah sistem komputer",
+  "server_start_meme_17": "Saya sedang mendekati posisi anda. Mulai lari",
+  "server_start_meme_18": "Jika anda bisa melihat pesan ini, selamat, anda bisa membaca",
+  "server_start_meme_19": "Selamat! Dapatlah kunci tarkov gratis disini: https://bit.ly/3TJbUh2",
   "server_start_meme_2": "Wibu bau bawang",
   "server_start_meme_20": "Kau tahu tidak, 9 dari 10 pengguna tidak bisa baca pesan ini",
+  "server_start_meme_21": "Pernahkah anda bertanya-tanya, apakah semuanya melihat warna merah sesama anda?",
+  "server_start_meme_23": "SPT menjaga kegadisanmu sejak 2018",
+  "server_start_meme_4": "Jangan lupa untuk like dan subscribe",
+  "server_start_meme_6": "Sumpah, jangan sampai kamu pakai repack fitgirl",
   "server_start_meme_7": "bogos binted",
   "server_start_player_active_botreload_skill": "Karakter anda memiliki keahlian 'BotReload' aktif, hal ini akan membuat senjata anda isi ulang cepat sekali, abaikan pesan ini jika disengaja",
   "started_webserver_success": "Webserver dimulai pada %s",
@@ -364,7 +405,9 @@
   "websocket-message_sent": "[WS] pesan terkirim",
   "websocket-not_ready_message_not_sent": "[WS] Soket belum siap untuk %s, pesan tidak terkirim",
   "websocket-pinging_player": "[WS] notifikasikan player: %s",
-  "websocket-player_connected": "[WS] Player: {{sessionId}} {{contextId}} tersambung",
   "websocket-received_message": "[WS] Menerima pesan dari pengguna %s ",
-  "websocket-started": "Websocket mulai di %s"
+  "websocket-started": "Websocket mulai di %s",
+  "chatbot-cannot_accept_any_more_of_gift": "Anda tidak bisa untuk menerima hadiah ini lagi",
+  "chatbot-snow_enabled": "Salju akan ditampilkan untuk raid selanjutnya sampai servernya dimuat ulang",
+  "chatbot-summer_enabled": "Musim kemarau ditampilkan untuk raid selanjutnya sampai servernya dimuat ulang"
 }
