--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/it.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/it.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "L'oggetto %s non trovato anche dopo la rigenerazione della cache base",
   "baseclass-missing_db_no_cache": "Database vuoto, impossibile generare cache base degli oggetti",
   "bleeding_edge_build": "BLEEDINGEDGE",
+  "btr-unable_to_find_items_in_dialog_template": "Non è stato possibile trovare itemsDelivered in dialogueTemplates per il giocatore: %s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "ATTENZIONE - La cache dei bot non ha un bot pre-generato di tipo %s, dovrà quindi essere generato, configura nel file bot.json la proprietà di configurazione (presetBatch) per essere più in alto",
   "bot-bot_preset_count_value_missing": "Impossibile trovare un numero di preset da generare per il bot: %s, reimpostazione del numero predefinito 30",
   "bot-compatibility_check_missing_props": "Impossibile validare l'item: {{id}} {{name}} nella posizione {{slot}} può essere equipaggiato, manca un valore _props",
@@ -56,6 +57,8 @@
   "bot-weapon_missing_mod_slot": "Posizione: {{modSlot}} non esiste per l'arma: {{weaponId}} {{weaponName}} in {{botRole}}",
   "bot-weapons_required_slot_missing_item": "Posizione Obbligatoria '{{modSlot}}' di {{modName}} {{slotId}} è vuota in {{botRole}}",
   "build-unable_to_delete_preset": "Impossibile eliminare il preset, non è possibile trovare l' %s in arma, equipaggiamento o preset di rivista",
+  "cultistcircle-unable_to_find_stash_id": "Non è stato possibile trovare l'ID del gruzzolo del cerchio dei cultisti dentro l'inventario [HideoutAreaStashes]! Nessuna ricompensa generata",
+  "cultistcircle-no_matching_threshhold_found": "Non è stato possibile trovare la corrispondente soglia del valore del circolo dei cultisti che corrisponda all'ammontare in rubli: ({{rewardAmountRoubles}}), ripiego su tempo di creazione di 12 ore",
   "chat-unable_to_register_command_already_registered": "Impossibile registrare il comando già registrato: %s",
   "client_request": "[Richiesta Client] %s",
   "client_request_ip": "[Richiesta Client] {{ip}}{{url}}",
@@ -79,6 +82,7 @@
   "fence-unable_to_find_assort_by_id": "Impossibile trovare l'assortimento di Fence con id: %s",
   "fence-unable_to_find_offer_by_id": "Impossibile trovare l'offerta con id: %s",
   "fence-unable_to_get_ammo_penetration_value": "Nessun valore di penetrazione trovato per Ammo: %s, Impossibile controllare se è superiore al limite di penetrazione, verrà quindi considerato non penetrante",
+  "fence-unable_to_find_root_item_to_add": "Non è stato possibile aggiungere oggetti al Ricettatore in quanto non sono stati trovati root items",
   "fixer-clothing_item_found": "Oggetto %s che non esiste nel database è stato trovato nel profilo. Avrai sicuramente degli errori, potrebbero essere causati da una mod che aggiunge oggetti che è stata rimossa senza prima eliminare gli oggetti dall'inventario. Non utilizzare questo profilo! Apri Aki_Data\\Server\\configs\\core.json, modifica 'removeModItemsFromProfile' in modo che sia 'true'. Questo permetterà al server di modificare il tuo profilo e si spera che possa anche rimuovere i messaggi di errore",
   "fixer-mod_item_found": "Oggetto %s che non esiste nel database è stato trovato nel profilo. Avrai sicuramente degli errori, potrebbero essere causati da una mod che aggiunge item che è stata rimossa senza prima eliminare gli oggetti dall'inventario. Non utilizzare questo profilo! Apri Aki_Data\\Server\\configs\\core.json, modifica 'removeModItemsFromProfile' in modo che sia 'true'. Questo permetterà al server di modificare il tuo profilo e si spera che possa anche rimuovere i messaggi di errore",
   "fixer-trader_found": "Oggetto %s che non esiste nel database è stato trovato nel profilo. Avrai sicuramente degli errori, potrebbero essere causati da una mod che aggiunge oggetti che è stata rimossa senza prima eliminare gli oggetti dall'inventario. Non utilizzare questo profilo! Apri Aki_Data\\Server\\configs\\core.json, modifica 'removeModItemsFromProfile' in modo che sia 'true'. Questo permetterà al server di modificare il tuo profilo e si spera che possa anche rimuovere i messaggi di errore",
@@ -92,6 +96,7 @@
   "hideout-missing_recipe_for_area": "Impossibile trovare la ricetta: %s per il tipo d'area",
   "hideout-missing_recipe_in_db": "Non trovata la ricetta con _id: %s",
   "hideout-no_bitcoins_to_collect": "Nessun Bitcoin è pronto per la raccolta",
+  "hideout-bitcoin_craft_missing": "Non è stato possibile trovare la fattoria di Bitcoin, impossibile aggiornare il tempo necessario alla loro creazione",
   "hideout-unable_to_apply_stashsize_bonus_no_stash_found": "Impossibile applicare il bonus StashSize, l'inventario del nascondiglio con id: %s non è stato trovato nel profilo",
   "hideout-unable_to_find_area": "Impossibile trovare l'area del rifugio: %s nel profilo",
   "hideout-unable_to_find_area_in_database": "Impossibile trovare l'area: %s nella base dati",
@@ -185,6 +190,8 @@
   "loot-default_preset_not_found_using_random": "Configurazione predefinita dell'arma: %s non trovata, ne sarà scelta una random dello stesso tipo di arma",
   "loot-item_missing_parentid": "L'oggetto: %s manca di un parentId, impossibile usarlo come loot",
   "loot-non_item_picked_as_sealed_weapon_crate_reward": "Impossibile creare il loot, l'arma %s non è valida, era stata selezionata come ricompensa per una cassa sigillata",
+  "loot-preset_pool_is_empty": "Non è stato possibile trovare il preset casuale nel pool fornito in quanto è vuoto, verrà ignorato",
+  "loot-chosen_preset_missing_encyclopedia_value": "Il preset selezionato: %s manca di proprietà nell'enciclopedia, verrà ignorato",
   "mail-unable_to_find_message_sender_by_id": "Impossibile trovare il mittente del messaggio di posta con id: %s",
   "mail-unable_to_give_gift_not_handled": "Impossibile dare il regalo al giocatore, ricompensa: %s non gestita dal server",
   "mailsend-missing_npc_dialog": "Impossibile inviare il messaggio da %s al giocatore. Non esiste l'oggetto di dialogo",
@@ -199,11 +206,10 @@
   "modloader-error_parsing_mod_load_order": "Errore nel processare l'ordine di caricamento della mod",
   "modloader-incompatibilities_not_string_array": "Le proprietà 'incompatibilities' della mod %s, nel package.json, devono essere uno string array",
   "modloader-incompatible_mod_found": "La mod {{author}}-{{name}} è incompatibile con {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Sto installando le dipendenze per la Mod: {{name}} by: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "La mod: {{name}} di: {{author}} richiede dipendenze esterne, ma la funzione è attualmente disabilitata, vai su \"{{configPath}}\", imposta \"{{configOption}}\" a true e riavvia il server.\nAttivando questa opzione ti assumi tutta la responsabilità di ciò che {{name}} scarica sul tuo Pc.",
   "modloader-invalid_sptVersion_field": "La mod %s contiene una stringa semver non valida nel campo akiVersion. Esempi di valori validi: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "Il package.json della Mod %s contiene una stringa 'version' non valida",
   "modloader-is_client_mod": "La mod (%s) è una mod del client e dovrebbe essere posizionata nella seguente cartella: /spt/bepinex/plugins",
+  "modloader-is-old-js-mod": "La Mod (%s) è una server mod pre-4.0.0. Si prega di utilizzare la versione appropriata della mod o aspettare che venga aggiornata.",
   "modloader-load_order_conflict": "Il server si spegnerà perché i requisiti dell'ordine di carico per `{{modOneName}}` e `{{modTwoName}}` sono in conflitto. Sistemali prima di avviare",
   "modloader-loaded_mod": "Caricata la mod {{name}}, versione{{version}}, di {{author}} ",
   "modloader-loading_mods": "ModLoader: caricamento %s mods del server...",
@@ -596,14 +602,14 @@
   "quest-handover_wrong_item": "Impossibile consegnare l'item per la missione {{questId}}, tpl atteso: {{requiredTpl}} ma consegnato in: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() Oggetto con _id: %s non trovato nell'inventario",
   "quest-no_skill_found": "Abilità %s non trovata",
-  "quest-reward_type_not_handled": "La ricompensa del tipo: {{rewardType}} non viene gestita per la missone: {{questId}} nome: {{questName}}",
   "quest-unable_to_find_compare_condition": "Metodo di confronto non riconosciuto: %s",
-  "quest-unable_to_find_matching_hideout_production": "Impossibile trovare nell'hideout una ricetta corrispondente per la quest: {{questName}}, corrispondenze trovate: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Quest id: {{questId}} del tipo: {{questType}} non trovato nel database",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Impossibile trovare la missione: %s nel database, non sarà possibile dare le ricompense della missione al giocatore",
   "quest-unable_to_find_repeatable_to_replace": "Impossibile trovare nel profilo la missione ripetibile da sostituire, sarà quindi saltata",
   "quest-unable_to_find_trader_in_profile": "Impossibile trovare il mercante: %s nel profilo",
   "quest-unable_to_remove_scav_quest_from_profile": "Impossibile rimuovere la missione dello scav: {{questIdToRemove}} dal profilo: {{profileId}}",
+  "quest-repeatable_generation_failed_please_report": "Non è stato possibile generare la missione ripetibile dopo %s tentativi. Questo non dovrebbe accadere. Per favore segnalaci l'accaduto",
+  "quest-repeatable_elimination_generation_failed_please_report": "Non è stato possibile generare una missione ripetibile di Eliminazione. I luoghi non sono stati trovati. Per favore segnalaci l'accaduto",
   "ragfair-invalid_player_offer_request": "Impossibile piazzare l'offerta, la richiesta è invalida",
   "ragfair-item_not_in_db_unable_to_generate_dynamic_stack_count": "L'oggetto con tpl: %s non è stato trovato nel db. Impossibile generare un numero di stack dinamico",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() - fallita la ricerca del barterScheme per l'oggetto id: {{itemId}} tpl: {{tpl}} su {{name}}",
@@ -628,6 +634,7 @@
   "ragfair-unable_to_remove_offer_doesnt_exist": "Non è possibile rimuovere l'offerta con id %s perché non è stata trovata sul flea market",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Impossibile trovare l'offerta: {{offerId}} nel profilo: {{profileId}} perché l'offerta non è definita, la creo ora",
   "ragfair-generating_offers": "Generando le offerte del flea market...",
+  "ragfair-offer_page_doesnt_exist": "La seguente pagina del mercato delle pulci non esiste più, verrà visualizzata la fine della lista delle offerte",
   "release-beta-disclaimer": "Premendo OK accetti che non ti venga offerto nessun supporto perchè questa versione è sperimentale e solo per testare bug. NON è una versione da giocare! Le mod sono disabilitate. Non affezionarti al tuo profilo perché potrebbe essere necessario crearne spesso di nuovi. Segnala i bug che trovi nell'apposito canale su discord o sulla pagina web dev.sp-tarkov.com/SPT-AKI/Issues/issues. Se non premi il tasto OK in tempo, il gioco si chiuderà.",
   "release-beta-disclaimer-accept": "L'utente ha accettato i termini della beta",
   "release-beta-disclaimer-mods-enabled": "Premendo OK accetti che non ti venga offerto nessun supporto perchè questa versione è sperimentale e solo per testare bug. NON è per giocarci! Le mod sono disabilitate, NON aprire segnalazioni se stai usando delle mod. NON chiedere ai modder di aggiornare le loro mod. Segnala i bug che trovi nell'apposito canale su discord o sulla pagina web dev.sp-tarkov.com/SPT-AKI/Issues/issues. Se non premi il tasto OK in tempo, il gioco si chiuderà.",
@@ -652,6 +659,8 @@
   "repeatable-quest_handover_failed_condition_invalid": "Errore riconsegna quest: la condizione non è stata trovata o il valore è errato. qid: {{body.qid}}, condizione: {{body.conditionId}}",
   "repeatable-unable_to_accept_quest_see_log": "Impossibile accettare quest, vedi i log del server per i dettagli",
   "repeatable-unable_to_accept_quest_starting_message_not_found": "Impossibile accettare missioni: {{questId}} non è possibile trovare il messaggio iniziale con id: {{messageId}}",
+  "reward-type_not_handled": "Non è stato possibile gestire la ricompensa di tipo: {{rewardType}} per la missione/achievement: {{questId}}",
+  "reward-unable_to_find_matching_hideout_production": "Non è stato possibile trovare la corrispondenza per lo sblocco di un oggetto da creare nel nascondiglio per la missione/achievement: {{questId}}, corrispondenze trovate: {{matchCount}}",
   "route_onupdate_no_response": "La route di onUpdate: %s non riporta alcun successo o fallimento",
   "scav-missing_karma_level_getting_default": "getScavKarmaLevel() fallito, impossibile trovare fence in profile.traderInfo. Si ritorna al livello di karma predefinito: 0",
   "scav-missing_karma_settings": "Impossibile recuperare le impostazioni del karma per il livello %s",
@@ -687,8 +696,12 @@
   "server_start_meme_8": "It's morbin time",
   "server_start_meme_9": "S-step scav? C-cosa stai facendo?",
   "server_start_player_active_botreload_skill": "Il tuo personaggio ha l'abilita 'BotReload' attiva. Questo comporta la ricarica delle armi eccessivamente veloce. Ignora questo messaggio se questo è un comportamento atteso",
-  "server_start_success": "Buon divertimento",
+  "server_start_success": "Il server è stato avviato con successo, buona partita",
   "started_webserver_success": "Webserver avviato all'indirizzo %s",
+  "scavcase-no_cartridges_found_matching_price": "Non è stato possibile ottenere una lista di munizioni che corrisponde al criterio desiderato per la ricompensa della cassa dello scav",
+  "weightedrandomhelper-supplied_items_empty": "A WeightedRandom() sono stati dati 0 oggetti, non è stato possibile scegliere un peso a caso",
+  "weightedrandomhelper-supplied_weights_empty": "A WeightedRandom() sono stati dati 0 pesi, non è stato possibile scegliere un peso a caso",
+  "weightedrandomhelper-supplied_data_doesnt_match": "A WeightedRandom() sono stati dati {{itemCount}} oggetti e {{weightCount}} pesi, non è stato possibile scegliere un peso a caso",
   "trader-missing_durability_threshold_value": "Impossibile trovare la soglia di durabilità per il mercante {{traderId}}, si ritorna sul predefinito: {{value}}",
   "trader-missing_repair_property_using_default": "Al mercante {{traderId}} {{nickname}} manca un oggetto di riparazione, saranno aggiunti i valori predefiniti",
   "trader-missing_repair_quality_property_using_default": "Al mercante: {{traderId}} {{nickname}} manca un valore di qualità delle riparazioni, sarà aggiunto il valore predefinito",
@@ -700,6 +713,9 @@
   "trader-unable_to_find_trader_by_id": "Impossibile trovare il trader con Id: %s",
   "trader-unable_to_find_trader_in_enum": "Impossibile trovare il trader: %s nell'enum dei mercanti",
   "trader-unable_to_purchase_item_limit_reached": "Impossibile acquistare l'oggetto dal mercante: {{traderId}} dato che il suo limite di acquisto di: {{limit}} è stato raggiunto",
+  "trader-unable_to_find_selltotrader_counter": "Non è stato possibile trovare il counter per [sellToTrader] della quest: %s nel database, il contatore non aumenterà",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "Non è stato possibile trovare il seguente oggetto da vendere nell'inventario: %s, impossibile aumentare il contatore, verrà ignorato",
+  "trader-unable_to_add_custom_trader": "Non è stato possibile aggiungere questo mercante personalizzato: {{traderId}}, {{stackTrace}}",
   "unhandled_response": "[NON CONSEGNATO][%s]",
   "unknown_request": "Richiesta sconociuta!",
   "validation_error_decode": "Impossibile decodificare checks.dat. Validazione del file saltata.",
@@ -710,7 +726,7 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "NON SEGNALARLO",
   "watermark-free_of_charge": "Questo lavoro è gratuito",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
+  "watermark-issue_tracker_url": "https://github.com/sp-tarkov/server/",
   "watermark-modding_disabled": "QUESTA BUILD HA LE MOD SERVER DISATTIVATE",
   "watermark-no_support": "NESSUN SUPPORTO SARA' FORNITO",
   "watermark-not_an_issue": "QUESTO NON É UN ERRORE",
@@ -723,6 +739,7 @@
   "websocket-not_ready_message_not_sent": "[WS] Socket non pronto per %s, messaggio non inviato",
   "websocket-pinging_player": "[WS] Pingando il giocatore: %s",
   "websocket-player_connected": "[WS] Giocatore: {{sessionId}} {{contextId}} si è connesso",
+  "websocket-player_reconnect": "[WS] Giocatore: {{sessionId}} {{contextId}} richiesta di riconnessione ricevuta, verrà chiuso il precedente socket attivo",
   "websocket-received_message": "[WS] Ricevuto messaggio dall'utente %s ",
   "websocket-socket_lost_deleting_handle": "[WS] Socket perso, handle in eliminazione",
   "websocket-started": "Websocket partito all'indirizzo %s",
@@ -730,5 +747,7 @@
   "chatbot-forced_event_enabled": "L'evento %s è stato attivato, sei pregato di riavviare il client prima di cominciare un raid",
   "chatbot-added_stash_rows_please_restart": "Sono state aggiunte due righe di inventario, riavvia il gioco per visualizzarle",
   "chatbot-snow_enabled": "La neve sarà attiva per i prossimi raid fino al riavvio del server",
-  "chatbot-summer_enabled": "L'estate è ora attiva per i tutti i raid fino al riavvio del server"
+  "chatbot-summer_enabled": "L'estate è ora attiva per i tutti i raid fino al riavvio del server",
+  "chatbot-command_was_empty": "Il comando che hai inserito era vuoto, impossibile elaborare",
+  "webserver_already_running": "Un'altra copia del webserver è già aperta. Sei pregato di chiuderla prima di avviarne una nuova."
 }
