--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/nl.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/nl.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "Voorwerp %s nog steeds niet gevonden in de basis cache na herstel",
   "baseclass-missing_db_no_cache": "Database was leeg, kon geen item basis cache genereren",
   "bleeding_edge_build": "BLEEDINGEDGE",
+  "btr-unable_to_find_items_in_dialog_template": "Niet in staat om itemsDelivered binnen dialogueTemplates te vinden voor speler: %s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "WAARSCHUWING - Bot cache heeft nog geen gegenereerde bot van type %s, zal moeten gegenereerd worden, configureer de bot.json configuratie eigenschap (presetBatch) om hoger te zijn",
   "bot-bot_preset_count_value_missing": "Kan geen vooraf ingestelde telling vinden om te genereren voor bot: %s, standaard ingesteld op 30",
   "bot-compatibility_check_missing_props": "Kon item niet valideren: {{id}} {{name}} in slot {{slot}} kan worden uitgerust, het mist een _props waarde",
@@ -56,6 +57,8 @@
   "bot-weapon_missing_mod_slot": "Opening: {{modSlot}}' bestaat niet voor wapen: {{weaponId}} {{weaponName}} op {{botRole}}",
   "bot-weapons_required_slot_missing_item": "Vereiste opening '{{modSlot}}' op {{modName}} {{slotId}} was leeg op {{botRole}}",
   "build-unable_to_delete_preset": "Niet in staat om de voorinstelling te verwijderen, kan %s niet vinden in wapen, uitrusting of magazijn voorinstellingen",
+  "cultistcircle-unable_to_find_stash_id": "Niet in staat om cultist circle stash ID binnen inventaris [HideoutAreaStashes] te vinden! Er zijn geen beloningen gegenereerd",
+  "cultistcircle-no_matching_threshhold_found": "Niet in staat om een passende cultist circle drempelwaarde te vinden die overeenkomt met de hoeveelheid roubles: ({{rewardAmountRoubles}}), er wordt een terugval van 12 uur crafting tijd gebruikt",
   "chat-unable_to_register_command_already_registered": "Niet in staat om de al geregistreerde opdracht: %s te registreren",
   "client_request": "[Cliëntverzoek] %s",
   "client_request_ip": "[Clientverzoek] {{ip}} {{url}}",
@@ -79,6 +82,7 @@
   "fence-unable_to_find_assort_by_id": "Kan assortiment voor verkoper 'Fence' niet vinden voor id: %s",
   "fence-unable_to_find_offer_by_id": "Kan aanbod met id: %s niet vinden",
   "fence-unable_to_get_ammo_penetration_value": "Geen penetratie waarde gevonden voor munitie: %s, kan niet controleren of deze boven het penetratie limiet uitgaat, wordt aangenomen van niet",
+  "fence-unable_to_find_root_item_to_add": "Niet in staat om items aan Fence toe te voegen omdat er geen fundamentele items gevonden zijn",
   "fixer-clothing_item_found": "Kleding voorwerp: %s gevonden in profiel dat niet bestaat in SPT. Je ZAL fouten tegenkomen, dit kan komen door het gebruik van een kleding mod en het verwijderen van de mod terwijl je karakter het nog steeds draagt. GEBRUIK DIT PROFIEL NIET. Open SPT_Data\\Server\\configs\\core.json, wijzig 'removeModItemsFromProfile' van 'false' naar 'true'. Dit maakt het de server mogelijk om jouw profiel te wijzigen en hopelijk de missende kleding te verwijderen",
   "fixer-mod_item_found": "Voorwerp: %s gevonden in profiel dat niet bestaat in de 'items' database. Je ZAL fouten tegenkomen, dat kan komen door het gebruik van een voorwerpen mod en het verwijderen van de mod zonder de gemodificeerde items van de mod te verwijderen uit je inventaris. GEBRUIK DIT PROFIEL NIET. Open Open SPT_Data\\Server\\configs\\core.json, wijzig 'removeModItemsFromProfile' van 'false' naar 'true'. Dit maakt het de server mogelijk om jouw profiel te wijzigen en hopelijk de foute voorwerpen te verwijderen",
   "fixer-trader_found": "Trader: %s gevonden in profiel maar bestaat niet in SPT. Je ZAL fouten tegenkomen, dat kan komen door het gebruik van een trader mod en het verwijderen van de mod zonder de berichten van de desbetreffende trader te verwijderen. GEBRUIK DIT PROFIEL NIET. Open Open SPT_Data\\Server\\configs\\core.json, wijzig 'removeModItemsFromProfile' van 'false' naar 'true'. Dit maakt het de server mogelijk om jouw profiel te wijzigen en hopelijk de foute berichten te verwijderen",
@@ -92,6 +96,7 @@
   "hideout-missing_recipe_for_area": "Kon geen recept: %s vinden voor gebied type",
   "hideout-missing_recipe_in_db": "Kon geen recept met _id: %s vinden",
   "hideout-no_bitcoins_to_collect": "Er zijn geen bitcoins klaar",
+  "hideout-bitcoin_craft_missing": "Bitcoin farm craft was niet gevonden, niet in staat om de tijd up te daten die besteed is aan craften",
   "hideout-unable_to_apply_stashsize_bonus_no_stash_found": "Kan de 'Stash'Size' bonus niet toepassen, 'stash' met id: %s niet gevonden in profiel",
   "hideout-unable_to_find_area": "Kan in het profiel geen plek %s vinden voor de schuilplek",
   "hideout-unable_to_find_area_in_database": "Kon geen gebied: %s vinden in de database",
@@ -185,6 +190,8 @@
   "loot-default_preset_not_found_using_random": "Standaard voorinstelling voor wapen: %s niet gevonden, een willekeurige van hetzelfde wapen wordt in plaats ervan gekozen",
   "loot-item_missing_parentid": "Item: %s heeft geen parentId waarde, item kan niet gebruikt worden als loot",
   "loot-non_item_picked_as_sealed_weapon_crate_reward": "Ongeldig wapen: %s, was gekozen als beloning voor verzegelde wapen krat, niet in staat loot te creëren",
+  "loot-preset_pool_is_empty": "Kan geen willekeurige preset vinden in de opgegeven selectie, omdat deze leeg is, wordt overgeslagen",
+  "loot-chosen_preset_missing_encyclopedia_value": "Gekozen preset: %s mist encyclopedie eigenschap, wordt overgeslagen",
   "mail-unable_to_find_message_sender_by_id": "Kan mail bericht afzender met id: %s niet vinden",
   "mail-unable_to_give_gift_not_handled": "Niet in staat om speler cadeau te geven via beloningscode: %s wordt niet behandeld door de server",
   "mailsend-missing_npc_dialog": "Kan bericht van: %s niet sturen naar speler. Er bestaat geen dialoog object voor deze persoon",
@@ -199,11 +206,10 @@
   "modloader-error_parsing_mod_load_order": "Fout tijdens het parsen van de mod laadvolgorde",
   "modloader-incompatibilities_not_string_array": "Mod %s package.json property 'incompatibilities' moet een string array zijn",
   "modloader-incompatible_mod_found": "Mod {{author}}-{{name}} is niet compatibel met {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Afhankelijkheden installeren voor Mod: {{name}} door: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Mod: {{name}} door: {{author}} vereist externe afhankelijkheden, maar de functie is momenteel uitgeschakeld, Ga naar \"{{configPath}}\", stel \"{{configOption}}\" in op true en herstart de server.\nDoor dit aan te zetten neem je alle verantwoordelijkheid voor wat {{name}} naar je machine download.",
   "modloader-invalid_sptVersion_field": "Mod: %s bevat een ongeldige semver string in het sptVersion veld. Voorbeelden van geldige waarden: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "Mod %s package.json bevat een invalide versie string",
   "modloader-is_client_mod": "Mod (%s) is een client mod en moet in de volgende map geplaatst worden: /spt/bepinex/plugins",
+  "modloader-is-old-js-mod": "Mod (%s) is een pre-4.0.0 server mod. Zoek de juiste versie of wacht op een update.",
   "modloader-load_order_conflict": "`{{modOneName}}` en`{{modTwoName}}` hebben een conflict in de volgorde van laden, de server kan niet opstarten tot het conflict is opgelost. De server word gestopt",
   "modloader-loaded_mod": "Mod {{name}} versie{{version}} door {{author}} is geladen",
   "modloader-loading_mods": "ModLoader: %s mods worden ingeladen op server...",
@@ -596,14 +602,14 @@
   "quest-handover_wrong_item": "Niet in staat om item voor missie {{questId}} in te leveren, verwachtte tpl: {{requiredTpl}} maar heeft: {{handedInTpl}} ingeleverd",
   "quest-item_not_found_in_inventory": "changeItemStack() Item met _id: %s niet gevonden in inventaris",
   "quest-no_skill_found": "Skill %s niet gevonden",
-  "quest-reward_type_not_handled": "Missie beloning type: {{rewardType}} niet behandeld voor missie: {{questId}} naam: {{questName}}",
   "quest-unable_to_find_compare_condition": "Onherkende vergelijkings methode: %s",
-  "quest-unable_to_find_matching_hideout_production": "Niet in staat een passende hideout fabricatie ontgrendeling voor missie: {{questName}}, gevonde resultaten: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Quest id: {{questId}} met type: {{questType}} niet gevonden in database",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Kan quest: %s niet vinden in db, niet in staat om quest beloningen te geven aan speler",
   "quest-unable_to_find_repeatable_to_replace": "Kan geen herhaalbare quest in profiel vinden om te vervangen, wordt overgeslagen",
   "quest-unable_to_find_trader_in_profile": "Kan trader: %s niet vinden in profiel",
   "quest-unable_to_remove_scav_quest_from_profile": "Kan de scav quest: {{questIdToRemove}} niet verwijderen van profiel: {{profileId}}",
+  "quest-repeatable_generation_failed_please_report": "Herhaalbare quest kon niet worden gegenereerd na %s pogingen. Dit zou nooit moeten gebeuren. Maak hiervoor alstublieft een rapport aan",
+  "quest-repeatable_elimination_generation_failed_please_report": "Niet in staat om een herhaalbare eliminatie quest te genereren. Geen locaties gevonden. Maak hiervoor alstublieft een rapport aan",
   "ragfair-invalid_player_offer_request": "Kon geen aanbod plaatsen, request is invalide",
   "ragfair-item_not_in_db_unable_to_generate_dynamic_stack_count": "Voorwerp met tpl: %s niet gevonden in db. Kan geen dynamische stack count genereren",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() Gefaald om barterScheme te vinden voor item id: {{itemId}} tpl: {{tpl}} op {{name}}",
@@ -628,6 +634,7 @@
   "ragfair-unable_to_remove_offer_doesnt_exist": "Niet in staat om aanbod te verwijderen met id: %s omdat het niet gevonden kan worden op de flea market",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Niet in staat om aanbod te vinden: {{offerId}} in profiel: {{profileId}} omdat aanbiedingen niet gedefinieerd is, wordt aangemaakt",
   "ragfair-generating_offers": "Flea aanbod genereren...",
+  "ragfair-offer_page_doesnt_exist": "De huidige flea pagina bestaat niet meer, het einde van de lijst met aanbiedingen wordt getoond",
   "release-beta-disclaimer": "Door op OK te drukken gaat u ermee akkoord dat er geen ondersteuning wordt geboden en dat dit alleen voor bug testing is. Geen daadwerkelijke gameplay. Mods zijn uitgeschakeld. Een nieuw profiel kan vaker vereist zijn. Rapporteer alle fouten in het rapport-kanaal in discord, of op de issues-pagina op de website. Als je niet op OK drukt tegen de aangegeven tijd, zal het spel sluiten.",
   "release-beta-disclaimer-accept": "Gebruiker heeft de beta disclaimer geaccepteerd",
   "release-beta-disclaimer-mods-enabled": "Door op OK te drukken gaat u ermee akkoord dat er geen ondersteuning geboden zal worden en dat dit enkel voor bug testing bedoeld is. NIET voor werkelijke gameplay. Mods zijn ingeschakeld, maak GEEN probleem melding aan in verband met mods. Vraag de mod auteur NIET om zijn mod aan te passen naar de nieuwste game-versie. Rapporteer alle bugs in het rapporteer kanaal in discord of op de problemen pagina in de website. Als je niet op OK drukt voor de aangegeven tijd zal het spel afsluiten.",
@@ -652,6 +659,8 @@
   "repeatable-quest_handover_failed_condition_invalid": "Quest overdrachtsfout: voorwaarde niet gevonden of onjuiste waarde. qid: {{body.qid}}, voorwaarde: {{body.conditionId}}",
   "repeatable-unable_to_accept_quest_see_log": "Kon missie niet accepteren, zie server log voor details",
   "repeatable-unable_to_accept_quest_starting_message_not_found": "Kon missie niet accepteren: {{questId}} kan geen missie gestart bericht vinden met id: {{messageId}}",
+  "reward-type_not_handled": "Beloningstype {{rewardType}} niet afgehandeld voor quest/prestatie: {{questId}}",
+  "reward-unable_to_find_matching_hideout_production": "Niet in staat een passende hideout craft ontgrendeling te vinden voor missie/prestatie: {{questId}}, gevonden resultaten: {{matchCount}}",
   "route_onupdate_no_response": "onUpdate: %s route rapporteert geen success of faal",
   "scav-missing_karma_level_getting_default": "getScavKarmaLevel() gefaald, kon fence niet vinden in profiel traderInfo. Er wordt teruggevallen op karma niveau 0",
   "scav-missing_karma_settings": "Kon geen karma instellingen vinden voor level %s",
@@ -687,8 +696,12 @@
   "server_start_meme_8": "its morbin time",
   "server_start_meme_9": "S-stief scav? W-wat ben je aan het doen?",
   "server_start_player_active_botreload_skill": "Jouw character heeft de 'BotReload' skill actief, dit zorgt ervoor dat je wapens onnatuurlijk snel herladen, negeer dit bericht als dit de bedoeling is",
-  "server_start_success": "Veel plezier",
+  "server_start_success": "Server is gestart, veel plezier met spelen",
   "started_webserver_success": "webserver gestart op %s",
+  "scavcase-no_cartridges_found_matching_price": "Niet in staat om een lijst met munitie te krijgen die voldoet aan de gewenste criteria voor scav case beloning",
+  "weightedrandomhelper-supplied_items_empty": "WeightedRandom() werd 0 items gegeven, niet in staat om een willekeurig gewicht te kiezen",
+  "weightedrandomhelper-supplied_weights_empty": "WeightedRandom() werd 0 gewichten gegeven, niet in staat om een willekeurig gewicht te kiezen",
+  "weightedrandomhelper-supplied_data_doesnt_match": "WeightedRandom() werd {{itemCount}} items en {{weightCount}} gewichten gegeven, niet in staat om een willekeurig gewicht te kiezen",
   "trader-missing_durability_threshold_value": "Niet in staat om duurzaamheid drempelwaarde te vinden voor trader: {{traderId}}, er wordt teruggevallen op: {{value}}",
   "trader-missing_repair_property_using_default": "Trader {{traderId}} {{nickname}} mist een reparatie object, standaard waarden worden toegevoegd",
   "trader-missing_repair_quality_property_using_default": "Trader {{traderId}} {{nickname}} mist een reparatiekwaliteit eigenschap, standaard waarden worden toegevoegd",
@@ -700,6 +713,9 @@
   "trader-unable_to_find_trader_by_id": "Kan trader met Id: %s niet vinden",
   "trader-unable_to_find_trader_in_enum": "Kan trader: %s niet vinden in Traders enum",
   "trader-unable_to_purchase_item_limit_reached": "Kan voorwerp niet aanschaffen van trader: {{traderId}} omdat hun aankoop limiet van: {{limit}} bereikt is",
+  "trader-unable_to_find_selltotrader_counter": "Niet in staat om [sellToTrader] teller te vinden voor: %s quest in db, teller zal niet verhoogd worden",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "Kan inventaris item: %s niet vinden om te verkopen, kan teller niet ophogen, wordt overgeslagen",
+  "trader-unable_to_add_custom_trader": "Niet in staat om aangepaste trader toe te voegen: {{traderId}}, {{stackTrace}}",
   "unhandled_response": "[ONBEHANDELD][%s]",
   "unknown_request": "Onbekende request!",
   "validation_error_decode": "Niet in staat om checks.dat te decoderen. Bestandsvalidatie overgeslagen.",
@@ -710,7 +726,7 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "RAPPORTEER HET NIET",
   "watermark-free_of_charge": "Dit werk is gratis",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
+  "watermark-issue_tracker_url": "https://github.com/sp-tarkov/server/",
   "watermark-modding_disabled": "DEZE BUILD HEEFT SERVER MODDEN UITGESCHAKELD",
   "watermark-no_support": "ER WORDT GEEN SUPPORT GEGEVEN",
   "watermark-not_an_issue": "DIT IS GEEN PROBLEEM",
@@ -723,6 +739,7 @@
   "websocket-not_ready_message_not_sent": "[WS] Socket niet klaar voor %s, bericht niet verzonden",
   "websocket-pinging_player": "[WS] speler: %s wordt gepingt",
   "websocket-player_connected": "[WS] Speler: {{sessionId}} {{contextId}} is verbonden",
+  "websocket-player_reconnect": "[WS] Speler: {{sessionId}} {{contextId}} Herverbinding ontvangen, vorige actieve socket wordt gesloten",
   "websocket-received_message": "[WS] Bericht ontvangen van gebruiker %s ",
   "websocket-socket_lost_deleting_handle": "[WS] Socket verloren, handle verwijderen",
   "websocket-started": "Websocket gestart op %s",
@@ -730,5 +747,7 @@
   "chatbot-forced_event_enabled": "%s evenement is geactiveerd, herstart je game client voordat je een raid start",
   "chatbot-added_stash_rows_please_restart": "2 Rijen toegevoegd aan de stash, herstart uw spel om ze te zien",
   "chatbot-snow_enabled": "Sneeuw is ingeschakeld voor alle volgende raids totdat de server opnieuw wordt opgestart",
-  "chatbot-summer_enabled": "Zomer is geactiveerd voor alle hierop volgende raids totdat de server herstart is"
+  "chatbot-summer_enabled": "Zomer is geactiveerd voor alle hierop volgende raids totdat de server herstart is",
+  "chatbot-command_was_empty": "Je ingevoerde opdracht was leeg, kan het niet verwerken",
+  "webserver_already_running": "Er is al een andere kopie van de webserver actief. Gelieve deze af te sluiten voordat je een nieuwe start."
 }
