--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/pl.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/pl.json
@@ -199,8 +199,6 @@
   "modloader-error_parsing_mod_load_order": "Błąd analizowania kolejności ładowania modów",
   "modloader-incompatibilities_not_string_array": "Mod %s właściwość package.json 'incompatibilities' powinna być tabelą string",
   "modloader-incompatible_mod_found": "Mod {{author}}-{{name}} jest niezgodny z {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Instalowanie zależności dla Moda: {{name}} stworzonego przez: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Mod: {{name}} stworzony przez: {{author}} wymaga zewnętrznych zależności, ale funkcja jest obecnie wyłączona, przejdź do \"{{configPath}}\", ustaw \"{{configOption}}\" na True oraz zrestartuj serwer.\nPoprzez włączenie akceptujesz wszelką odpowiedzialność za to, co {{name}} pobiera na twój komputer.",
   "modloader-invalid_sptVersion_field": "Mod %s zawiera nieprawidłowy string semver w polu sptVersion. Przykłady prawidłowych wartości: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "Mod %s package.json zawiera nieprawidłowy string wersji",
   "modloader-is_client_mod": "Mod (%s) jest modem klienta i powinien zostać umieszczony w następującym folderze: /spt/bepinex/plugins",
@@ -511,7 +509,7 @@
   "pmcresponse-victim_plead_23": "Tanie zabijanie",
   "pmcresponse-victim_plead_24": "Tak to jest",
   "pmcresponse-victim_plead_25": "To już koniec",
-  "pmcresponse-victim_plead_26": "Chciałem tylko zrobić kilka questów w {{victimDeathLocation}} nie proszę o wiele",
+  "pmcresponse-victim_plead_26": "Chciałem tylko zrobić kilka zadań w {{victimDeathLocation}} nie proszę o wiele",
   "pmcresponse-victim_plead_3": "Mam nadzieję, że jesteś zadowolony, nie stać mnie nawet na nowy ekwipunek",
   "pmcresponse-victim_plead_4": "Bracie, jestem nowy w grze, dlaczego mnie zabiłeś",
   "pmcresponse-victim_plead_5": "Nigdy nie ukończę tego głupiego zadania",
@@ -596,9 +594,7 @@
   "quest-handover_wrong_item": "Nie można przekazać przedmiotu w ramach zadania {{questId}}, oczekiwano tpl: {{requiredTpl}} ale przekazano: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() Przedmiot o ID: %s nie został znaleziony w ekwipunku",
   "quest-no_skill_found": "Nie znaleziono umiejętności %s",
-  "quest-reward_type_not_handled": "Typ nagrody z zadania: {{rewardType}} nieobsługiwany dla zadania: {{questId}} o nazwie: {{questName}}",
   "quest-unable_to_find_compare_condition": "Nierozpoznana metoda porównywania: %s",
-  "quest-unable_to_find_matching_hideout_production": "Nie można odnaleźć pasującego odblokowania wytwarzania dla zadania: {{questName}}, znalezione dopasowania: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Id zadania: {{questId}} z typu: {{questType}} nie została znaleziona w bazie danych",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Brak możliwości znalezienia zadania: %s w bazie danych, brak możliwości przekazania graczowi nagrody za zadanie",
   "quest-unable_to_find_repeatable_to_replace": "Nie można znaleźć powtarzalnego zadania w profilu do wymiany, pomijam",
@@ -627,7 +623,7 @@
   "ragfair-unable_to_purchase_0_count_item": "Nie można kupić przedmiotu: %s z liczbą 0",
   "ragfair-unable_to_remove_offer_doesnt_exist": "Nie można usunąć oferty o id: %s, ponieważ nie można jej znaleźć na pchlim targu",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Nie można znaleźć oferty: {{offerId}} w profilu: {{profileId}}, ponieważ oferty są niezdefiniowane, tworzenie",
-  "ragfair-generating_offers": "Generowanie ofert flea...",
+  "ragfair-generating_offers": "Generowanie ofert pchlego marketu...",
   "release-beta-disclaimer": "Naciskając OK, akceptujesz informację o braku wsparcia dla tej wersji. Jest to wersja do testowania błędów, NIE służy do faktycznej rozgrywki. Modyfikacje są wyłączone. Tworzenie nowych profili może być często wymagane. Wszelkie błędy proszę zgłaszać na kanale zgłoszeń na Discordzie lub na stronie internetowej w sekcji zgłoszeń. Jeśli nie naciśniesz OK w określonym czasie, gra zostanie zamknięta.",
   "release-beta-disclaimer-accept": "Użytkownik zaakceptował sprostowanie o wersji beta",
   "release-beta-disclaimer-mods-enabled": "Naciskając OK, akceptujesz informację o braku wsparcia dla tej wersji. Jest to wersja do testowania błędów, NIE służy do faktycznej rozgrywki. Modyfikacje są włączone. NIE zgłaszaj problemów z modyfikacjami. NIE proś autorów modyfikacji o ich aktualizację. Wszelkie błędy proszę zgłaszać na kanale zgłoszeń na Discordzie lub na stronie internetowej w sekcji zgłoszeń. Jeśli nie naciśniesz OK w określonym czasie, gra zostanie zamknięta.",
@@ -687,7 +683,6 @@
   "server_start_meme_8": "Czas na rzeź",
   "server_start_meme_9": "S-step scav? C-co ty robisz?",
   "server_start_player_active_botreload_skill": "Twój bohater ma aktywną umiejętność 'BotReload', co spowoduje, że twoje bronie będą się przeładowywać nienaturalnie szybko, zignoruj tę wiadomość, jeśli jest to zamierzone",
-  "server_start_success": "Miłej gry",
   "started_webserver_success": "Uruchomiono serwer WWW pod adresem %s",
   "trader-missing_durability_threshold_value": "Nie można znaleźć wartości progu wytrzymałości dla handlarza: {{traderId}}, używanie domyślnej wartości: {{value}}",
   "trader-missing_repair_property_using_default": "Handlarz {{traderId}} {{nickname}} nie posiada obiektu \"repair\", dodawanie domyślnych wartości",
@@ -710,7 +705,6 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "NIE ZGŁASZAJ TEGO",
   "watermark-free_of_charge": "Ta praca jest darmowa",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
   "watermark-modding_disabled": "TA WERSJA MA WYŁĄCZONE MODYFIKACJE SERWERA",
   "watermark-no_support": "NIE UDZIELAMY WSPARCIA",
   "watermark-not_an_issue": "TO NIE JEST PROBLEM",
@@ -722,13 +716,12 @@
   "websocket-message_sent": "[WS] Wiadomość wysłana",
   "websocket-not_ready_message_not_sent": "[WS] Gniazdo nie jest gotowe do %s, wiadomość nie została wysłana",
   "websocket-pinging_player": "[WS] Pingowanie gracza: %s",
-  "websocket-player_connected": "[WS] Gracz: {{sessionId}} {{contextId}} dołączył",
   "websocket-received_message": "[WS] Otrzymano wiadomość od użytkownika %s",
   "websocket-socket_lost_deleting_handle": "[WS] Gniazdo utracone, usuwanie uchwytu",
   "websocket-started": "Uruchomiono gniazdo WebSocket pod adresem %s",
   "chatbot-cannot_accept_any_more_of_gift": "Nie możesz przyjąć więcej tych prezentów",
-  "chatbot-forced_event_enabled": "Event %s został włączony, zrestartuj klienta gry zanim wejdziesz do rajdu",
-  "chatbot-added_stash_rows_please_restart": "Dodano 2 wiersze do stasha, proszę zrestartuj grę, aby je zobaczyć",
+  "chatbot-forced_event_enabled": "Event %s został włączony, zrestartuj klienta gry, zanim wejdziesz do rajdu",
+  "chatbot-added_stash_rows_please_restart": "Dodano 2 wiersze do skrzynki, proszę, zrestartuj grę, aby je zobaczyć",
   "chatbot-snow_enabled": "Śnieg jest włączony dla wszystkich kolejnych deszczów do czasu ponownego uruchomienia serwera",
   "chatbot-summer_enabled": "Lato zostało włączone dla wszystkich kolejnych rajdów do czasu ponownego uruchomienia serwera"
 }
