--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/pt-pt.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/pt-pt.json
@@ -54,6 +54,7 @@
   "customisation-item_already_purchased": "Item de vestuário {{itemId}} {{itemName}} já foi comprado",
   "customisation-unable_to_find_clothing_item_in_inventory": "Item de vestuário não encontrado no inventário com id: %s",
   "customisation-unable_to_find_suit_by_id": "Não foi possível encontrar a oferta de vestuário do comerciante com id: %s",
+  "database-data_at_path_missing": "O banco de dados não conseguiu recuperar os dados de: [%s]. Por favor, verifique se suas configurações estão válidas e se os dados no local existem",
   "dialog-missing_item_template": "Não foi possível encontrar o item tpl {{tpl}} na bd, não foi possível enviar a mensagem do tipo {{type}}, ignorando",
   "event-unhandled_event": "[EVENTO NÃO TRATADO] %s",
   "executing_startup_callbacks": "Servidor: executando chamadas de inicialização...",
@@ -132,8 +133,6 @@
   "modloader-error_parsing_mod_load_order": "Erro ao analisar ordem de carregamento de mods",
   "modloader-incompatibilities_not_string_array": "A propriedade 'incompatibilities' no package.json do mod %s deve ser um array de strings",
   "modloader-incompatible_mod_found": "Mod {{author}}-{{name}} é incompatível com {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Instalando dependências para o Mod: {{name}} por: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Mod: {{name}} por: {{author}} requer dependências externas mas a funcionalidade está desativada no momento. Vai a \"{{configPath}}\", define \"{{configOption}}\" para true e reinicia o servidor.\nAo ativar esta funcionalidade assumes toda a responsabilidade pelo o que o {{name}} faz download para o teu computador.",
   "modloader-invalid_version_property": "O package.json do Mod %s contém uma string de versão inválida",
   "modloader-is_client_mod": "Mod (%s) é um mod de cliente e deve ser colocado na seguinte pasta: /spt/bepinex/plugins",
   "modloader-load_order_conflict": "O '{{modOneName}}' e '{{modTwoName}}' têm requisitos de ordem de carregamento que entram em conflito. O servidor é incapaz de iniciar e será desligado até isto ser corrigido",
@@ -498,9 +497,7 @@
   "quest-handover_wrong_item": "Impossível entregar item para quest {{questId}}, esperado tpl: {{requiredTpl}} mas foi entregue: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() item com _id: %s não encontrado no inventário",
   "quest-no_skill_found": "Habilidade %s não foi encontrada",
-  "quest-reward_type_not_handled": "Tipo de recompensa da missão: {{rewardType}} não foi tratada para a missão: {{questId}} nome: {{questName}}",
   "quest-unable_to_find_compare_condition": "Método de comparação não reconhecido: %s",
-  "quest-unable_to_find_matching_hideout_production": "Não foi possível encontrar o desbloqueio de craft correspondente para a missão: {{questName}}, correspondências encontradas: {{matchCount}}",
   "ragfair-invalid_player_offer_request": "Não é possível fazer oferta, a solicitação é inválida",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() Falha ao encontrar barterScheme para o item id: {{itemId}} tpl: {{tpl}} em {{name}}",
   "ragfair-no_trader_assorts_cant_generate_flea_offers": "Não foi possível gerar ofertas no mercado flea para o comerciante %s, nenhum produto encontrado",
@@ -568,7 +565,6 @@
   "server_start_meme_8": "é hora de morbin",
   "server_start_meme_9": "P-padrasto scav? O-oque está fazendo? ",
   "server_start_player_active_botreload_skill": "Seu personagem tem a habilidade \"BotReload\" ativa, isso causará suas armas de recarregar de forma desnatural e rápida, ignore essa mensagem se isso for intencional",
-  "server_start_success": "Bom jogo",
   "started_webserver_success": "Webserver iniciado em %s",
   "trader-missing_durability_threshold_value": "Não foi possível encontrar o valor limite da durabilidade para o trader: {{traderId}}, voltando para o padrão de: {{value}}",
   "trader-missing_trader_details_using_default_refresh_time": "Comerciante: {{traderId}} não encontrado, gerando entrada temp com tempo de atualização padrão de: {{updateTime}}",
@@ -595,8 +591,8 @@
   "websocket-message_sent": "[WS] mensagem enviada",
   "websocket-not_ready_message_not_sent": "[WS] Socket não está pronto para %s, mensagem não enviada",
   "websocket-pinging_player": "[WS] Pingando jogador: %s",
-  "websocket-player_connected": "[WS] Jogador: {{sessionId}} {{contextId}} conectou-se",
   "websocket-received_message": "[WS] Mensagem recebida do utilizador %s ",
   "websocket-socket_lost_deleting_handle": "[WS] Socket perdido, excluindo handle",
-  "websocket-started": "Websocket iniciado em %s"
+  "websocket-started": "Websocket iniciado em %s",
+  "chatbot-forced_event_enabled": "O evento %s foi ativado. Reinicie o seu cliente de jogo antes de iniciar uma raid"
 }
