--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/ru.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/ru.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "Предмет %s до сих пор не был найден в кеше после генерации",
   "baseclass-missing_db_no_cache": "База данных пуста, не удалось сгенерировать кэш базовых предметов",
   "bleeding_edge_build": "BLEEDINGEDGE",
+  "btr-unable_to_find_items_in_dialog_template": "Не удалось найти itemsDelivered в dialogueTemplates для игрока: %s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "ВНИМАНИЕ - Кэш ботов не имеет предварительно сгенерированного типа бота %s, его необходимо будет создать, выставьте свойство (presetBatch) в конфигурации bot.json на более высокое значение",
   "bot-bot_preset_count_value_missing": "Не удалось найти количество пресетов для создания бота: %s, устанавливаю значение по умолчанию 30",
   "bot-compatibility_check_missing_props": "Невозможно проверить предмет: {{id}} {{name}} в слоте {{slot}} нельзя экипировать, у него отсутствует значение _props",
@@ -199,8 +200,6 @@
   "modloader-error_parsing_mod_load_order": "Ошибка парсинга порядка загрузки модов",
   "modloader-incompatibilities_not_string_array": "В файле package.json мода %s свойство 'incompatibilities' должно быть массивом строк",
   "modloader-incompatible_mod_found": "Мод {{author}}-{{name}} не совместим с модом {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Установка зависимостей мода: {{name}} от: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Мод: {{name}} автор: {{author}} требует внешних зависимостей, но эта функция в настоящее время отключена, перейдите к \"{{configPath}}\", установите для \"{{configOption}}\" значение true и перезапустите сервер.\nВключив эту опцию, вы принимаете на себя всю ответственность за то, что {{name}} загружает на ваш компьютер.",
   "modloader-invalid_sptVersion_field": "В поле sptVersion мода %s содержится некорректная семвер-строка. См. примеры корректных значений: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "В моде %s package.json содержит недопустимую строку версии",
   "modloader-is_client_mod": "Мод (%s) является модом для клиента и должен находиться в следующей папке: /spt/bepinex/plugins",
@@ -596,9 +595,7 @@
   "quest-handover_wrong_item": "Невозможно сдать предмет для задания {{questId}}, ожидаемый tpl: {{requiredTpl}}, но передан: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() Предмет с _id: %s не найден в инвентаре",
   "quest-no_skill_found": "Навык %s не найден",
-  "quest-reward_type_not_handled": "Тип награды за квест: {{rewardType}} не обработан для квеста: {{questId}} название: {{questName}}",
   "quest-unable_to_find_compare_condition": "Непризнанный метод сравнения: %s",
-  "quest-unable_to_find_matching_hideout_production": "Не удалось найти подходящий крафт в убежище для выполнения задания: {{questName}}, найдено совпадений: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Квест с ID: {{questId}} и типом: {{questType}} не найден в базе данных",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Не удалось найти квест: %s в базе данных, невозможно дать игроку награду за квест",
   "quest-unable_to_find_repeatable_to_replace": "Невозможно найти повторяемое задание для замены, пропускаем",
@@ -687,7 +684,6 @@
   "server_start_meme_8": "Алё. Ну чё там с деньгами?",
   "server_start_meme_9": "С-сводный дикус? Ч-что ты делаешь?",
   "server_start_player_active_botreload_skill": "У вашего персонажа активен навык 'BotReload', это приведет к неестественно быстрой перезарядке вашего оружия, игнорируйте это сообщение, если это так и задумано.",
-  "server_start_success": "Удачной игры",
   "started_webserver_success": "Запускаем веб-сервер на %s",
   "trader-missing_durability_threshold_value": "Невозможно найти значение порога прочности для торговца: {{traderId}}, возвращаемся к значению по умолчанию: {{value}}",
   "trader-missing_repair_property_using_default": "Торговец {{traderId}} {{nickname}} не имеет объекта для ремонта, используются значения по умолчанию",
@@ -710,7 +706,6 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "НЕ ОТПРАВЛЯЙТЕ БАГ-РЕПОРТ НАСЧЕТ ЭТОГО",
   "watermark-free_of_charge": "Данный проект является бесплатным",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
   "watermark-modding_disabled": "В ЭТОЙ СБОРКЕ ОТСУТСТВУЮТ ВОЗМОЖНОСТИ МОДИФИКАЦИИ",
   "watermark-no_support": "ПОДДЕРЖКА НЕ БУДЕТ ОКАЗЫВАТЬСЯ",
   "watermark-not_an_issue": "ЭТО НЕ ОШИБКА",
@@ -722,7 +717,6 @@
   "websocket-message_sent": "[WS] сообщение отправлено",
   "websocket-not_ready_message_not_sent": "[WS] Веб-сокет не готов для %s, сообщение не отправлено",
   "websocket-pinging_player": "[WS] Пингуем игрока: %s",
-  "websocket-player_connected": "[WS] Игрок: {{sessionId}} {{contextId}} присоединился",
   "websocket-received_message": "[WS] Получили сообщение от пользователя %s ",
   "websocket-socket_lost_deleting_handle": "[WS] Веб-сокет потерян, удаляем соединение",
   "websocket-started": "Запустили веб-сокет на %s",
