--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/tr.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/tr.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "Yenilemeden sonra %s öğesi temel önbellekte hala bulunamadı",
   "baseclass-missing_db_no_cache": "Veritabanı boştu, öğe tabanı önbelleği oluşturulamadı",
   "bleeding_edge_build": "BLEEDINGEDGE",
+  "btr-unable_to_find_items_in_dialog_template": "Oyuncu için dialogueTemplates içinde itemsDelivered bulunamıyor: %s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "UYARI - Bot önbelleğinde %s türünde önceden oluşturulmuş bir bot yok, oluşturulması gerekecek, bot.json yapılandırma özelliğini (presetBatch) daha yüksek olacak şekilde yapılandırın",
   "bot-bot_preset_count_value_missing": "Bot için oluşturulacak önceden ayarlanmış bir sayı bulunamıyor: %s, varsayılan olarak 30",
   "bot-compatibility_check_missing_props": "Öğe doğrulanamıyor: {{id}} {{name}} yuvada: {{slot}} donatılabilir, bir _props değeri eksik",
@@ -56,6 +57,8 @@
   "bot-weapon_missing_mod_slot": "Slot: {{modSlot}}' silah için mevcut değil: {{weaponId}} {{weaponName}} on {{botRole}}",
   "bot-weapons_required_slot_missing_item": "{{modName}} {{slotId}} üzerinde gerekli '{{modSlot}}' yuvası {{botRole}} üzerinde boştu",
   "build-unable_to_delete_preset": "Ön ayar silinemiyor, silah, ekipman veya şarjör ön ayarlarında %s bulunamıyor",
+  "cultistcircle-unable_to_find_stash_id": "Envanter [HideoutAreaStashes] içinde kültist çemberi zula kimliği bulunamıyor! Hiçbir ödül oluşturulmadı",
+  "cultistcircle-no_matching_threshhold_found": "Ruble miktarıyla eşleşen cultist çemberi eşik değeri bulunamıyor: ({{rewardAmountRoubles}}), 12 saatlik zanaat süresinin geri dönüşünü kullanarak",
   "chat-unable_to_register_command_already_registered": "Önceden kaydedilmiş komut kaydedilemiyor: %s",
   "client_request": "[İstemci İsteği] %s",
   "client_request_ip": "[İstemci İsteği] {{ip}} {{url}}",
@@ -79,6 +82,7 @@
   "fence-unable_to_find_assort_by_id": "Id: %s Fence için assort verisi bulunamıyor",
   "fence-unable_to_find_offer_by_id": "id: %s ile teklif bulunamıyor",
   "fence-unable_to_get_ammo_penetration_value": "Cephane: %s için penetrasyon değeri bulunamadı, penetrasyon sınırının üzerinde olup olmadığı kontrol edilemiyor, yanlış varsayılıyor",
+  "fence-unable_to_find_root_item_to_add": "Kök öğe bulunamadığı için Fence'e öğe eklenemiyor",
   "fixer-clothing_item_found": "Giyim eşyası: SPT'de mevcut olmayan %s profilinde bulundu. Hatalar yaşayacaksınız, bunun nedeni bir kıyafet modu kullanmak ve karakteriniz hala giyerken modu kaldırmak olabilir. BU PROFILI KULLANMAYIN. SPT_Data\\Server\\configs\\core.json dosyasını açın, 'removeModItemsFromProfile' seçeneğini true olacak şekilde düzenleyin. Bu, sunucunun profilinizi düzenlemesine ve umarım eksik kıyafetleri kaldırmasına izin verecektir",
   "fixer-mod_item_found": "Eşya: %s, eşya veritabanında bulunmayan profilde bulundu. Hatalarla karşılaşacaksınız, bunun nedeni bir eşya modu kullanmak ve modlanmış eşyaları envanterinizden silmeden modu kaldırmak olabilir. BU PROFILI KULLANMAYIN. SPT_Data\\Server\\configs\\core.json dosyasını açın, 'removeModItemsFromProfile' seçeneğini true olacak şekilde düzenleyin. Bu, sunucunun profilinizi düzenlemesine ve umarım kötü öğeleri kaldırmasına izin verecektir",
   "fixer-trader_found": "Tüccar: SPT'de mevcut olmayan profilde %s bulundu. Hatalar yaşayacaksınız, bunun nedeni bir tüccar modu kullanmak ve söz konusu tüccardan gelen mesajları silmeden modu kaldırmak olabilir. BU PROFILI KULLANMAYIN. SPT_Data\\Server\\configs\\core.json dosyasını açın, 'removeModItemsFromProfile' seçeneğini true olacak şekilde düzenleyin. Bu, sunucunun profilinizi düzenlemesine ve umarım kötü mesajları kaldırmasına izin verecektir",
@@ -92,6 +96,7 @@
   "hideout-missing_recipe_for_area": "Tarif bulunamıyor: Alan türü için %s",
   "hideout-missing_recipe_in_db": "_id: %s ile tarif bulunamadı",
   "hideout-no_bitcoins_to_collect": "bitcoin teslim alınmaya hazır değil",
+  "hideout-bitcoin_craft_missing": "Bitcoin çiftliği üretimi bulunamadı, üretim için harcanan süre güncellenemiyor",
   "hideout-unable_to_apply_stashsize_bonus_no_stash_found": "StashSize bonusu uygulanamıyor, kimliği: %s olan zula profilde bulunamadı",
   "hideout-unable_to_find_area": "Saklanma alanı bulunamıyor: profilde %s",
   "hideout-unable_to_find_area_in_database": "Alan bulunamadı: %s veri tabanında",
@@ -185,6 +190,8 @@
   "loot-default_preset_not_found_using_random": "Silah için varsayılan ön ayar: %s bulunamadı, bunun yerine aynı silah türünden rastgele seçiliyor",
   "loot-item_missing_parentid": "Öğe: %s'nin bir parentId değeri yok, öğe ganimet olarak kullanılamıyor",
   "loot-non_item_picked_as_sealed_weapon_crate_reward": "Geçersiz silah: %s, mühürlü silah sandığı için ödül olarak seçildi, ganimet oluşturulamıyor",
+  "loot-preset_pool_is_empty": "Boş olduğu için verilen havuzda rastgele ön ayar bulunamıyor, atlanıyor",
+  "loot-chosen_preset_missing_encyclopedia_value": "Seçilen ön ayar: %s ansiklopedi özelliğinden yoksun, atlanıyor",
   "mail-unable_to_find_message_sender_by_id": "İd: %s ile posta iletisi göndereni bulunamıyor",
   "mail-unable_to_give_gift_not_handled": "Oyuncuya hediye verilemiyor, ödül: %s sunucu tarafından işlenmedi",
   "mailsend-missing_npc_dialog": "Şuradan mesaj gönderilemiyor: %s oyuncuya. Onlar için bir Diyalog nesnesi mevcut değil",
@@ -199,11 +206,10 @@
   "modloader-error_parsing_mod_load_order": "Mod yükleme sırası ayrıştırılırken hata oluştu",
   "modloader-incompatibilities_not_string_array": "Mod %s package.json özelliği 'incompatibilities' bir dize dizisi olmalıdır",
   "modloader-incompatible_mod_found": "Mod {{author}}-{{name}}, {{incompatibleModName}} ile uyumsuz",
-  "modloader-installing_external_dependencies": "Mod için bağımlılıklar yükleniyor: {{name}} tarafından: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Mod: {{name}} tarafından: {{author}} dış bağımlılıklar gerektiriyor ancak bu özellik şu anda devre dışı, \"{{configPath}}\"e gidin, \"{{configOption}}\"ı true olarak ayarlayın ve sunucuyu yeniden başlatın.\nBunu etkinleştirerek {{name}}'in makinenize indirdikleriyle ilgili tüm sorumluluğu kabul etmiş olursunuz.",
   "modloader-invalid_sptVersion_field": "Mod %s, sptVersion alanında geçersiz bir semver dizesi içeriyor. Geçerli değerlere örnekler: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "Mod %s package.json geçersiz bir sürüm dizesi içeriyor",
   "modloader-is_client_mod": "Mod (%s) bir istemci modudur ve aşağıdaki klasöre yerleştirilmelidir: /spt/bepinex/plugins",
+  "modloader-is-old-js-mod": "Mod (%s) 4.0.0 öncesi bir sunucu modudur. Lütfen uygun sürümü bulun veya bir güncelleme bekleyin.",
   "modloader-load_order_conflict": "`{{modOneName}}` ve `{{modTwoName}}` yük sırası gereksinimleri çakışıyor, bu sorun giderilene kadar sunucu başlayamıyor ve kapanacak",
   "modloader-loaded_mod": "Mod: {{name}} sürüm: {{version}} tarafından: {{author}} yüklendi",
   "modloader-loading_mods": "ModLoader: %s sunucu modları yükleniyor...",
@@ -596,14 +602,14 @@
   "quest-handover_wrong_item": "Quest {{questId}} için eşya teslim edilemiyor, beklenen tpl: {{requiredTpl}} ancak teslim edildi: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() Envanterde _id: %s ile öğe bulunamadı",
   "quest-no_skill_found": "Beceri %s bulunamadı",
-  "quest-reward_type_not_handled": "Görev ödül türü: {{rewardType}} görev için işlenmedi: {{questId}} ad: {{questName}}",
   "quest-unable_to_find_compare_condition": "Tanınmayan Karşılaştırma Yöntemi: %s",
-  "quest-unable_to_find_matching_hideout_production": "Görev: {{questName}} için eşleşen sığınak üretim kilidi açılamıyor, eşleşmeler bulundu: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Görev kimliği: {{questId}} ile türü: {{questType}} veritabanında bulunamadı",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Görev bulunamıyor: db'de %s, oyuncuya görev ödülleri verilemiyor",
   "quest-unable_to_find_repeatable_to_replace": "Değiştirilecek profilde tekrarlanabilir görev bulunamıyor, atlanıyor",
   "quest-unable_to_find_trader_in_profile": "Profilde Tüccar bulunamıyor: %s ",
   "quest-unable_to_remove_scav_quest_from_profile": "Scav görevi kaldırılamıyor: {{questIdToRemove}} profilden: {{profileId}}",
+  "quest-repeatable_generation_failed_please_report": "Tekrarlanabilir görev %s denemeden sonra oluşturulamadı. Böyle bir şey asla olmamalı. Lütfen rapor edin",
+  "quest-repeatable_elimination_generation_failed_please_report": "Tekrarlanabilir bir Eliminasyon görevi oluşturulamıyor. Konum bulunamadı. Lütfen raporlayın",
   "ragfair-invalid_player_offer_request": "Teklif yapılamıyor, istek geçersiz",
   "ragfair-item_not_in_db_unable_to_generate_dynamic_stack_count": "tpl: %s içeren öğe db'de bulunamadı. Dinamik yığın sayısı oluşturulamıyor",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() item id: {{itemId}} tpl: {{tpl}} için {{name}} üzerinde barterScheme bulunamadı",
@@ -628,6 +634,7 @@
   "ragfair-unable_to_remove_offer_doesnt_exist": "Bit pazarında bulunamadığı için id: %s ile teklif kaldırılamıyor",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Teklif bulunamıyor: Profil içinde {{offerId}}: Teklif tanımsız olduğu için {{profileId}} oluşturulamıyor",
   "ragfair-generating_offers": "Flea Market teklifleri oluşturuluyor...",
+  "ragfair-offer_page_doesnt_exist": "Mevcut flea sayfası artık mevcut değil, teklif listesinin sonunu gösteriyor",
   "release-beta-disclaimer": "Tamam'a basarak hiçbir destek sunulmadığını ve bunun yalnızca hata testi için olduğunu kabul edersiniz. Gerçek oyun DEĞİL. Modlar devre dışıdır. Sık sık yeni profiller gerekebilir. Tüm hataları discord'daki raporlar kanalında veya web sitesindeki sorunlar sayfasında bildirin. Belirtilen süreye kadar Tamam'a basmazsanız oyun kapanacaktır.",
   "release-beta-disclaimer-accept": "Kullanıcı beta feragatnamesini kabul etti",
   "release-beta-disclaimer-mods-enabled": "Tamam'a basarak hiçbir destek sunulmadığını ve bunun yalnızca hata testi için olduğunu kabul edersiniz. Gerçek oyun için DEĞİL. Modlar etkinleştirilmiştir, modlarla ilgili sorunları bildirmeyin. Mod yazarlarından güncellenmiş modlar İSTEMEYİN. Tüm hataları discord'daki raporlar kanalında veya web sitesindeki sorunlar sayfasında bildirin. Belirtilen zamana kadar Tamam'a basmazsanız, oyun kapanacaktır.",
@@ -652,6 +659,8 @@
   "repeatable-quest_handover_failed_condition_invalid": "Görev devir hatası: koşul bulunamadı veya yanlış değer. qid: {{body.qid}}, koşul: {{body.conditionId}}",
   "repeatable-unable_to_accept_quest_see_log": "Görev kabul edilemiyor, ayrıntılar için sunucu günlüğüne bakın",
   "repeatable-unable_to_accept_quest_starting_message_not_found": "Görev kabul edilemiyor: {{questId}} id ile görev başlatılmış mesaj metni bulunamıyor: {{messageId}}",
+  "reward-type_not_handled": "Ödül türü: {{rewardType}} görev/başarı için işlenmedi: {{questId}}",
+  "reward-unable_to_find_matching_hideout_production": "Görev/başarı için eşleşen sığınak zanaat kilidi bulunamıyor: {{questId}}, eşleşmeler bulundu: {{matchCount}}",
   "route_onupdate_no_response": "onUpdate: %s rotası başarı veya başarısızlık bildirmiyor",
   "scav-missing_karma_level_getting_default": "getScavKarmaLevel() başarısız oldu, profile.traderInfo içinde fence bulunamıyor. Varsayılan karma seviyesi 0",
   "scav-missing_karma_settings": "Seviye %s için karma ayarları alınamıyor",
@@ -687,8 +696,12 @@
   "server_start_meme_8": "wtf Is Ekonomi̇",
   "server_start_meme_9": "S-step scav? Ne yapıyorsun?",
   "server_start_player_active_botreload_skill": "Karakterinizde 'BotReload' becerisi aktif, bu silahlarınızın doğal olmayan bir şekilde hızlı doldurulmasına neden olacak, eğer bu amaçlanıyorsan bu mesajı dikkate almayın",
-  "server_start_success": "İyi oyunlar",
+  "server_start_success": "Sunucu başladı, iyi oyunlar",
   "started_webserver_success": "Sunucusu %s'de başlatıldı",
+  "scavcase-no_cartridges_found_matching_price": "Scav Case ödülü için istenen kriterlere uyan cephane listesi alınamıyor",
+  "weightedrandomhelper-supplied_items_empty": "WeightedRandom() işlevine 0 öğe verildi, rastgele bir ağırlık seçemedi",
+  "weightedrandomhelper-supplied_weights_empty": "WeightedRandom() fonksiyonuna 0 ağırlık verildi, rastgele bir ağırlık seçilemedi",
+  "weightedrandomhelper-supplied_data_doesnt_match": "WeightedRandom() fonksiyonuna {{itemCount}} öğeleri ve {{weightCount}} ağırlıkları verildi, rastgele bir ağırlık seçemedi",
   "trader-missing_durability_threshold_value": "Tüccar için dayanıklılık eşik değeri bulunamıyor: {{traderId}}, varsayılana geri dönüyor: {{value}}",
   "trader-missing_repair_property_using_default": "Tüccar {{traderId}} {{nickname}} bir onarım nesnesi eksik, varsayılan değerler ekleniyor",
   "trader-missing_repair_quality_property_using_default": "Tüccar: {{traderId}} {{nickname}} onarım kalitesi özelliği eksik, varsayılan değer ekleniyor",
@@ -700,6 +713,9 @@
   "trader-unable_to_find_trader_by_id": "Id'li tüccar bulunamıyor: %s",
   "trader-unable_to_find_trader_in_enum": "Tüccarlar enumunda tüccar: %s bulunamıyor",
   "trader-unable_to_purchase_item_limit_reached": "Tüccardan ürün satın alınamıyor: {{traderId}} tüccarının satın alma limiti: {{limit}} limitine ulaşıldı",
+  "trader-unable_to_find_selltotrader_counter": "Için [sellToTrader] sayacı bulunamıyor: db'de %s görevi, sayaç artırılmayacak",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "Envanter öğesi bulunamıyor: Satılacak %s, sayaç artırılamıyor, atlanıyor",
+  "trader-unable_to_add_custom_trader": "Özel tüccar eklenemiyor: {{traderId}}, {{stackTrace}}",
   "unhandled_response": "[UNHANDLED][%s]",
   "unknown_request": "Bilinmeyen istek!",
   "validation_error_decode": "Checks.dat dosyasının kodu çözülemiyor. Dosya doğrulaması atlandı.",
@@ -710,7 +726,7 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "SAKIN BİLDİRMEYİN",
   "watermark-free_of_charge": "Bu çalışma ücretsizdir",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
+  "watermark-issue_tracker_url": "https://github.com/sp-tarkov/server/",
   "watermark-modding_disabled": "BU YAPIDA SUNUCU MODLAMASI DEVRE DIŞI BIRAKILMIŞTIR",
   "watermark-no_support": "HİÇBİR DESTEK VERİLMEYECEK",
   "watermark-not_an_issue": "BU BİR HATA DEĞİL",
@@ -723,6 +739,7 @@
   "websocket-not_ready_message_not_sent": "[WS] Soket hazır değil %s, mesaj gönderilmedi",
   "websocket-pinging_player": "[WS] Oyuncuya ping atılıyor: %s",
   "websocket-player_connected": "[WS] Oyuncu: {{sessionId}} {{contextId}} bağlandı",
+  "websocket-player_reconnect": "[WS] Oyuncu: {{sessionId}} {{contextId}} yeniden bağlanma alındı, önceki etkin soket kapatılıyor",
   "websocket-received_message": "[WS] Kullanıcıdan mesaj alındı %s ",
   "websocket-socket_lost_deleting_handle": "[WS] Soket kayboldu, tanıtıcı siliniyor, durum",
   "websocket-started": "Websocket %s'de başlatıldı",
@@ -730,5 +747,7 @@
   "chatbot-forced_event_enabled": "%s Etkinliği etkinleştirildi, bir baskına başlamadan önce oyun istemcinizi yeniden başlatın",
   "chatbot-added_stash_rows_please_restart": "Zulaya 2 sıra eklendi, görmek için lütfen oyununuzu yeniden başlatın",
   "chatbot-snow_enabled": "Kar, sunucu yeniden başlatılana kadar sonraki tüm baskınlar için etkinleştirilir",
-  "chatbot-summer_enabled": "Yaz, sunucu yeniden başlatılana kadar sonraki tüm baskınlar için etkinleştirildi"
+  "chatbot-summer_enabled": "Yaz, sunucu yeniden başlatılana kadar sonraki tüm baskınlar için etkinleştirildi",
+  "chatbot-command_was_empty": "Yazdığınız komut boştu, işlenemedi",
+  "webserver_already_running": "Web sunucusunun başka bir kopyası zaten çalışıyor. Lütfen yeni bir tane başlatmadan önce onu kapatın."
 }
