--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/zh-cn.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/zh-cn.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "重新生成后仍未在基础缓存中找到物品 %s",
   "baseclass-missing_db_no_cache": "数据库为空，无法生成物品基础缓存",
   "bleeding_edge_build": "血色边缘测试版",
+  "btr-unable_to_find_items_in_dialog_template": "无法在 dialogueTemplates 中找到向玩家发送的 itemsDelivered 道具信息：%s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "警告 - Bot缓存没有%s种类的预生成bot，该类型需要被生成，请设定bot.json配置属性（presetBatch）以提高数量",
   "bot-bot_preset_count_value_missing": "找不到要为机器人生成的预设数: %s, 默认设值为 30",
   "bot-compatibility_check_missing_props": "无法验证槽位{{slot}}中的物品：{{id}} {{name}}可被装备，缺少_props值",
@@ -56,6 +57,8 @@
   "bot-weapon_missing_mod_slot": "{{botRole}}身上的武器：{{weaponId}} {{weaponName}}的槽位：{{modSlot}}不存在",
   "bot-weapons_required_slot_missing_item": "{{botRole}}上需要的{{modName}} {{slotId}}上的槽位'{{modSlot}}'是空的",
   "build-unable_to_delete_preset": "无法删除预设，在武器、装备或弹夹预设中找不到 %s",
+  "cultistcircle-unable_to_find_stash_id": "无法在仓库 [HideoutAreaStashes] 中找到仪式圈的 stash ID！没有奖励生成",
+  "cultistcircle-no_matching_threshhold_found": "无法找到与仪式圈相配的卢布数量阈值：({{rewardAmountRoubles}})，重新使用 12 小时奖励生成模式",
   "chat-unable_to_register_command_already_registered": "无法注册已注册命令： %s",
   "client_request": "[客户端请求] %s",
   "client_request_ip": "[客户端请求] {{ip}}{{url}}",
@@ -79,6 +82,7 @@
   "fence-unable_to_find_assort_by_id": "找不到id:%s的fence商品",
   "fence-unable_to_find_offer_by_id": "无法找到id为%s的报价",
   "fence-unable_to_get_ammo_penetration_value": "未找到弹药： %s的穿透值，无法检查其是否超过穿透限制，假定为false",
+  "fence-unable_to_find_root_item_to_add": "无法向黑商添加道具，找不到对应的根道具",
   "fixer-clothing_item_found": "存档中发现的服装物品：%s不存在于SPT内。你将会遇到错误，这可能是由于使用了服装模组，并在移除该模组时你的人物还在装备该服饰。千万不要使用这个存档。打开SPT_Data\\Server\\configs\\core.json，编辑 'removeModItemsFromProfile' 为 true。这会允许服务端编辑你的存档，且有望移除服装缺失。",
   "fixer-mod_item_found": "存档中发现物品：%s不存在于物品数据库中。你将会遇到错误，这可能是由于使用了物品模组且在移除模组时没有删除物品栏里的模组物品。千万不要使用这个存档。打开 SPT_Data\\Server\\configs\\core.json，编辑'removeModItemsFromProfile'为true。这会允许服务端编辑你的存档且有望移除无效物品。",
   "fixer-trader_found": "存档中发现的商人：%s不存在于SPT内。你将会遇到错误，这可能是由于使用了商人模组，并在移除该模组时还没有删除该商人发的消息。千万不要使用这个存档。打开SPT_Data\\Server\\configs\\core.json，编辑 'removeModItemsFromProfile' 为 true。这会允许服务端编辑你的存档，且有望移除无效消息。",
@@ -92,6 +96,7 @@
   "hideout-missing_recipe_for_area": "找不到这个藏身处区域的配方：%s",
   "hideout-missing_recipe_in_db": "寻找_id是%s的配方失败",
   "hideout-no_bitcoins_to_collect": "没有已经准备收获的比特币",
+  "hideout-bitcoin_craft_missing": "找不到比特币矿场，无法更新比特币生成所需时间",
   "hideout-unable_to_apply_stashsize_bonus_no_stash_found": "无法应用StashSize加成，id为: %s的储物空间在存档中未找到",
   "hideout-unable_to_find_area": "个人文件里找不到藏身处区域：%s",
   "hideout-unable_to_find_area_in_database": "数据库里找不到藏身处区域：%s",
@@ -185,6 +190,8 @@
   "loot-default_preset_not_found_using_random": "武器：%s的默认预设未找到，将随机选择同类型武器预设",
   "loot-item_missing_parentid": "物品：%s缺少parentId值，无法用作战利品",
   "loot-non_item_picked_as_sealed_weapon_crate_reward": "无效武器：%s，被选作密封武器箱的奖励，无法生成战利品",
+  "loot-preset_pool_is_empty": "无法在给定的预设池中找到随机预设，该预设池为空，正在跳过",
+  "loot-chosen_preset_missing_encyclopedia_value": "所选预设：%s 缺少百科 (encyclopedia) 属性，正在跳过",
   "mail-unable_to_find_message_sender_by_id": "找不到id为：%s的邮件发件人",
   "mail-unable_to_give_gift_not_handled": "无法给玩家礼物，奖励: %s 没有被服务器处理",
   "mailsend-missing_npc_dialog": "无法从%s 发送消息给玩家。他们的对话框对象不存在",
@@ -199,11 +206,10 @@
   "modloader-error_parsing_mod_load_order": "分析模组加载顺序时出错",
   "modloader-incompatibilities_not_string_array": "模组%s package.json属性“incompatibilities”应该是字符串数组",
   "modloader-incompatible_mod_found": "模组 {{author}}-{{name}} 不兼容 {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "正在安装依赖 模组：{{name}} 作者：{{author}}",
-  "modloader-installing_external_dependencies_disabled": "作者{{author}} 的模组{{name}} 需要下载外部（非SPT）组件才能正常运行，但目前下载机制是关闭的。需要到这里：\n”{{configPath}}”将“{{configOption}}”设置为 true，然后重启服务器。\n\n允许此下载机制代表用户对所有{{name}} 模组将要下载的文件负全部责任。",
   "modloader-invalid_sptVersion_field": "模组 %s 在sptVersion字段中包含无效的semver字符串。有效值示例：https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "模组 %s package.json包含无效的版本字符串",
   "modloader-is_client_mod": "模组 %s 是一个客户端模组，应该被放置在这个文件夹：/spt/bepinex/plugins",
+  "modloader-is-old-js-mod": "模组 (%s) 是 4.0.0 版本前的服务端模组，请使用对应版本的客户端或等待该模组更新适配。",
   "modloader-load_order_conflict": "模组`{{modOneName}} `和`{{modTwoName}} `存在载入顺序冲突，在解决此冲突前服务器将因无法正常启动而关闭",
   "modloader-loaded_mod": "模组：{{name}} 版本{{version}} 作者：{{author}} 已加载",
   "modloader-loading_mods": "模组加载器：正在加载%s个客户端模组……",
@@ -596,14 +602,14 @@
   "quest-handover_wrong_item": "无法上交任务{{questId}} 的物品，预期tpl: {{requiredTpl}} 实际上交：{{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() 物品栏中找不到_id: %s的物品",
   "quest-no_skill_found": "未找到技能%s",
-  "quest-reward_type_not_handled": "任务奖励未处理 奖励种类：{{rewardType}} 任务id：{{questId}} 任务名称：{{questName}}",
   "quest-unable_to_find_compare_condition": "未识别的比较方法：%s",
-  "quest-unable_to_find_matching_hideout_production": "找不到对应的藏身处工艺解锁，任务：{{questName}}，对应的：{{matchCount}}",
   "quest-unable_to_find_quest_in_db": "数据库内找不到任务id：{{questId}} 任务类型：{{questType}}",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "数据库内找不到任务：%s，无法给予玩家任务奖励",
   "quest-unable_to_find_repeatable_to_replace": "无法在存档中找到可重复的任务来替换，将跳过",
   "quest-unable_to_find_trader_in_profile": "存档内找不到商人：%s",
   "quest-unable_to_remove_scav_quest_from_profile": "无法从存档：{{profileId}} 中移除scav任务：{{questIdToRemove}}",
+  "quest-repeatable_generation_failed_please_report": "可重复任务在 %s 次尝试后生成失败。该问题不应发生。请向开发组反馈",
+  "quest-repeatable_elimination_generation_failed_please_report": "无法生成可重复歼灭任务。找不到任务要求的地图。请向开发组反馈",
   "ragfair-invalid_player_offer_request": "无法发布报价，请求无效",
   "ragfair-item_not_in_db_unable_to_generate_dynamic_stack_count": "数据库里找不到tpl为：%s的物品。无法生成动态堆栈计数",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() 找不到物品的barterScheme， 物品id: {{itemId}} tpl: {{tpl}} on {{name}}",
@@ -628,6 +634,7 @@
   "ragfair-unable_to_remove_offer_doesnt_exist": "无法移除id：%s的报价，因为跳蚤市场中未找到",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "存档：{{profileId}}中找不到报价：{{offerId}}因为报价未定义，正在创建",
   "ragfair-generating_offers": "正在生成跳蚤报价……",
+  "ragfair-offer_page_doesnt_exist": "当前跳蚤市场页面已不存在，正在显示存在的报价单末页",
   "release-beta-disclaimer": "按下“OK”即表示您同意您不会获得任何技术支持，且该版本仅用于错误测试。 此版本不代表实际游戏体验，模组已被禁用，可能需要用户频繁新建存档。 在SPT官方Discord的报告频道里报告所有错误，或在SPT网站的问题页面报告。 如果您在指定时间内不按下“OK”，游戏将自动关闭。",
   "release-beta-disclaimer-accept": "用户已接受测试版免责声明",
   "release-beta-disclaimer-mods-enabled": "按下“OK”即表示您同意您不会获得任何技术支持，且该版本仅用于错误测试。 此版本不代表实际游戏体验，模组已启用，请不要报告模组产生的问题，也请别催促模组作者更新模组。 在SPT官方Discord的报告频道里报告所有错误，或在SPT网站的问题页面报告。 如果您在指定时间内不按下“OK”，游戏将自动关闭。",
@@ -652,12 +659,15 @@
   "repeatable-quest_handover_failed_condition_invalid": "任务提交错误：条件未找到或者值不正确。qid(任务):{{body.qid}}，条件：{{body.conditionId}}",
   "repeatable-unable_to_accept_quest_see_log": "无法接取任务，查看服务端日志获取细节",
   "repeatable-unable_to_accept_quest_starting_message_not_found": "无法接取任务：{{questId}}找不到任务开始消息文本id: {{messageId}}",
+  "reward-type_not_handled": "任务/成就 {{questId}} 无法交付 {{rewardType}} 奖励类型的奖励",
+  "reward-unable_to_find_matching_hideout_production": "无法获取任务/成就 {{questId}} 解锁的藏身处配方，已找到匹配项：{{matchCount}}",
   "route_onupdate_no_response": "onUpdate: %s路由不报告成功或失败",
   "scav-missing_karma_level_getting_default": "getScavKarmaLevel() 失败，profile.traderInfo里找不到fence，好感等级默认化为0",
   "scav-missing_karma_settings": "无法获取%s等级的好感设置",
   "scav-unable_to_add_item_to_player_scav": "无法添加: %s 到玩家scav, 指定项目不是物品",
   "scheduled_event_failed_to_run": "计划中事件：“%s”运行失败。",
   "season-no_matching_season_found_for_date": "使用当前日期找不到对应季节，默认设为夏季",
+  "season-event_is_active": "活动：%s 已启用",
   "seasonal-missing_equipment_slot_on_bot": "无法将圣诞节装备从槽位：{{equipmentSlot}} 中移除，在bot：{{botRole}} 上找不到此物品",
   "seasonal-missing_loot_container_slot_on_bot": "无法从槽位: {{lootContainer}} 中移除圣诞节战利品，在bot: {{botRole}} 上找不到该物品",
   "server_running": "服务端正在运行",
@@ -686,8 +696,12 @@
   "server_start_meme_8": "上海堡垒泰好看辣",
   "server_start_meme_9": "性感PMC，在线被头眼",
   "server_start_player_active_botreload_skill": "你的人物激活了“BotReload”技能，这会导致你的武器换弹快得不自然，如果你是故意的请忽视这条消息",
-  "server_start_success": "玩的开心",
+  "server_start_success": "服务端已开启，游戏愉快",
   "started_webserver_success": "webserver已于%s启动",
+  "scavcase-no_cartridges_found_matching_price": "无法获取符合 Scav 宝箱奖励所需标准的弹药列表",
+  "weightedrandomhelper-supplied_items_empty": "WeightedRandom() 已获得 0 道具赋值，无法选择随机权重",
+  "weightedrandomhelper-supplied_weights_empty": "WeightedRandom() 已获得 0 权重赋值，无法选择随机权重",
+  "weightedrandomhelper-supplied_data_doesnt_match": "WeightedRandom() 已获得道具 {{itemCount}} 与 {{weightCount}} 权重赋值，无法选择随机权重",
   "trader-missing_durability_threshold_value": "找不到商人：{{traderId}}的耐久阈值，回退到默认：{{value}}",
   "trader-missing_repair_property_using_default": "商人{{traderId}}{{nickname}} 缺少一个维修对象，加入默认值",
   "trader-missing_repair_quality_property_using_default": "商人: {{traderId}}{{nickname}} 缺少一个维修质量属性，加入默认值",
@@ -699,6 +713,9 @@
   "trader-unable_to_find_trader_by_id": "无法找到id为: %s的商人",
   "trader-unable_to_find_trader_in_enum": "商人枚举中找不到商人：%s",
   "trader-unable_to_purchase_item_limit_reached": "无法从商人：{{traderId}} 处购买物品，已达到其购买次数限制：{{limit}}",
+  "trader-unable_to_find_selltotrader_counter": "数据库中不存在 %s 任务的 [sellToTrader] 计数器，相应任务的计数将不会增加。",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "无法找到仓库道具：出售的 %s 无法增加计数，正在跳过",
+  "trader-unable_to_add_custom_trader": "无法添加自定义商人：{{traderId}}, {{stackTrace}}",
   "unhandled_response": "[未处理][%s]",
   "unknown_request": "未知请求！",
   "validation_error_decode": "无法解码checks.dat。文件验证已跳过。",
@@ -709,7 +726,7 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "不 要 报 告",
   "watermark-free_of_charge": "该软件免费",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
+  "watermark-issue_tracker_url": "https://github.com/sp-tarkov/server/",
   "watermark-modding_disabled": "该 编 译 不 启 用 服 务 端 模 改",
   "watermark-no_support": "不 会 提 供 支 持",
   "watermark-not_an_issue": "这 不 是 个 问 题",
@@ -721,11 +738,16 @@
   "websocket-message_sent": "[WS] 消息已发送",
   "websocket-not_ready_message_not_sent": "[WS] %s的Socket未准备好，消息没有发送",
   "websocket-pinging_player": "[WS] 正在Ping的玩家：%s",
-  "websocket-player_connected": "[WS] 玩家：{{sessionId}} {{contextId}}已连接",
+  "websocket-player_connected": "[WS] 玩家：{{sessionId}} {{contextId}} 已连接",
+  "websocket-player_reconnect": "[WS] 玩家：{{sessionId}} {{contextId}} 已收到其重连请求，正在关闭先前的 socket",
   "websocket-received_message": "[WS] 接收到来自用户%s的消息",
   "websocket-socket_lost_deleting_handle": "[WS] Socket丢失，正在删除句柄",
   "websocket-started": "websocket启动于%s",
   "chatbot-cannot_accept_any_more_of_gift": "你无法再接收这个礼物",
+  "chatbot-forced_event_enabled": "%s 活动已启用，请在开始战局前重启游戏客户端",
   "chatbot-added_stash_rows_please_restart": "增加了2行仓库空间，请重启你的游戏",
-  "chatbot-snow_enabled": "在服务器重新启动之前，之后所有的战局都将是雪地"
+  "chatbot-snow_enabled": "在服务器重新启动之前，之后所有的战局都将是雪地",
+  "chatbot-summer_enabled": "夏季已开启，在服务端重启前所有战局将会启用夏季天气",
+  "chatbot-command_was_empty": "您输入的命令为空，无法处理",
+  "webserver_already_running": "另一个服务端进程实例正在运行中。请在启动新服务端进程实例前关闭它。"
 }
