--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/de.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/de.json
@@ -199,8 +199,6 @@
   "modloader-error_parsing_mod_load_order": "Fehler beim Parsen der Mod-Ladereihenfolge",
   "modloader-incompatibilities_not_string_array": "Die Mod %s package.json Eigenschaft 'Inkompatibilitäten' sollte ein String-Array sein",
   "modloader-incompatible_mod_found": "Mod {{author}}-{{name}} ist nicht kompatibel mit {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Abhängigkeiten für Mod: {{name}} von: {{author}} werden installieren",
-  "modloader-installing_external_dependencies_disabled": "Mod: {{name}} von: {{author}} erfordert externe Abhängigkeiten, aber die Funktion ist derzeit deaktiviert. Gehe zu '{{configPath}}', setze '{{configOption}}' auf 'true' und starte den Server neu.\nWenn du dies aktivierst, übernimmst du die volle Verantwortung dafür, was {{name}} auf deinen Computer herunterlädt.",
   "modloader-invalid_sptVersion_field": "Mod: %s enthält eine ungültige ´semver´ Zeichenkette im ´sptversions´ Feld. Beispiele für gültige Werte: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "Mod %s package.json enthält eine ungültige Versionszeichenfolge",
   "modloader-is_client_mod": "Mod (%s) ist ein Client-Mod und sollte im folgenden Ordner abgelegt werden: /spt/bepinex/plugins",
@@ -596,9 +594,7 @@
   "quest-handover_wrong_item": "Gegenstand für Quest {{questId}} konnte nicht abgegeben werden, erwarteter TPL: {{requiredTpl}}, aber abgegeben: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() Gegenstand mit _id: %s nicht im Inventar gefunden",
   "quest-no_skill_found": "Fertigkeit %s nicht gefunden",
-  "quest-reward_type_not_handled": "Quest-Belohnungstyp: {{rewardType}} nicht behandelt für Quest: {{questId}} Name: {{questName}}",
   "quest-unable_to_find_compare_condition": "Unbekannte Vergleichsmethode: %s",
-  "quest-unable_to_find_matching_hideout_production": "Für Quest: {{questName}} konnte keine passende Versteck-Freischaltung gefunden werden, Übereinstimmungen gefunden: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Quest id: {{questId}} mit Typ: {{questType}} nicht in der Datenbank gefunden",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Quest: %s kann nicht in db gefunden werden, Questbelohnungen können dem Spieler nicht gegeben werden",
   "quest-unable_to_find_repeatable_to_replace": "Es konnte keine wiederholbare Quest im Profil zum Ersetzen gefunden werden. Überspringe",
@@ -627,7 +623,7 @@
   "ragfair-unable_to_purchase_0_count_item": "Artikel konnte nicht gekauft werden: %s mit einer Anzahl von 0",
   "ragfair-unable_to_remove_offer_doesnt_exist": "Das Angebot mit der ID %s konnte nicht entfernt werden, da es nicht auf dem Flohmarkt gefunden werden konnte",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Angebot: {{offerId}} im Profil: {{profileId}} konnte nicht gefunden werden, da das Angebot nicht definiert ist und erstellt wird",
-  "ragfair-generating_offers": "Flohmarkt Angebote werden erstellt...",
+  "ragfair-generating_offers": "Flohmarkt Angebote werden generiert...",
   "release-beta-disclaimer": "Durch Drücken von OK akzeptierst du, dass kein Support geleistet wird und dieser Build nur zum Testen gedacht ist, NICHT um tatsächlich zu Spielen. Mods sind deaktiviert. Neue Profile werden möglicherweise regelmäßig benötigt. Melde alle Bugs im Report-Channel in Discord oder in den Issues auf Github. Wenn du OK nicht in der vorgegebenen Zeit drückst, schließt sich das Spiel.",
   "release-beta-disclaimer-accept": "Benutzer hat den Beta-Disclaimer akzeptiert",
   "release-beta-disclaimer-mods-enabled": "Durch Drücken von OK akzeptierst du, dass kein Support geleistet wird und dieser Build nur zum Testen gedacht ist, NICHT um tatsächlich zu spielen. Mods sind aktiviert, Mod-Probleme NICHT reporten. Mod-Authoren NICHT nach Mod-Updates fragen. Melde alle Bugs im Report-Channel in Discord oder in den Issues auf Github. Wenn du OK nicht in der vorgegebenen Zeit drückst, schließt sich das Spiel.",
@@ -687,7 +683,6 @@
   "server_start_meme_8": "Es ist Morbin-Zeit",
   "server_start_meme_9": "S-step scav? W-was machst du?",
   "server_start_player_active_botreload_skill": "Bei deinem Charakter ist die Fertigkeit 'BotReload' aktiviert. Dies führt dazu, dass deine Waffen unnatürlich schnell nachladen. Ignoriere diese Meldung, wenn dies beabsichtigt ist",
-  "server_start_success": "Viel Spaß beim Spielen",
   "started_webserver_success": "Webserver bei %s gestartet",
   "trader-missing_durability_threshold_value": "Der Haltbarkeitsschwellenwert für Händler: {{traderId}} konnte nicht gefunden werden, es wird auf den Standardwert zurückgegriffen: {{value}}",
   "trader-missing_repair_property_using_default": "Händler {{traderId}} {{nickname}} fehlt ein Reparaturobjekt, Standardwerte werden hinzufügt",
@@ -710,7 +705,6 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "MELDEN UNTERSAGT",
   "watermark-free_of_charge": "Diese Arbeit ist kostenfrei",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
   "watermark-modding_disabled": "BEI DIESEM BUILD IST DAS SERVER-MODDING DEAKTIVIERT",
   "watermark-no_support": "ES WIRD KEIN SUPPORT GEWÄHRT",
   "watermark-not_an_issue": "DAS IST KEIN PROBLEM",
@@ -722,7 +716,6 @@
   "websocket-message_sent": "[WS]-Nachricht gesendet",
   "websocket-not_ready_message_not_sent": "[WS] Socket nicht bereit für %s, Nachricht nicht gesendet",
   "websocket-pinging_player": "[WS] Spieler wird angepingt: %s",
-  "websocket-player_connected": "[WS] Spieler: {{sessionId}} {{contextId}} hat eine Verbindung hergestellt",
   "websocket-received_message": "[WS] Nachricht von Benutzer %s erhalten ",
   "websocket-socket_lost_deleting_handle": "[WS] Socket verloren, Handle wird gelöscht",
   "websocket-started": "Websocket auf %s gestartet",
@@ -730,5 +723,5 @@
   "chatbot-forced_event_enabled": "%s Event wurde aktiviert. Starte das Spiel neu, bevor du einen Raid beginnst",
   "chatbot-added_stash_rows_please_restart": "2 Zeilen wurden dem Lager hinzugefügt. Bitte starte das Spiel neu, um diese zu sehen",
   "chatbot-snow_enabled": "Schnee ist für alle folgenden Raids aktiviert, bis der Server neu gestartet wird",
-  "chatbot-summer_enabled": "Sommer ist für alle folgenden Raids aktiviert, bis der Server neu gestartet wird"
+  "chatbot-summer_enabled": "Sommer ist für alle folgenden Raids aktiviert, bis der Server neu gestartet wurde"
 }
