--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/el.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/el.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "Το στοιχείο %s δε βρέθηκε ακόμα στη βασική κρυφή μνήμη μετά την αναγέννηση",
   "baseclass-missing_db_no_cache": "Η βάση δεδομένων ήταν κενή, αδυναμία δημιουργίας ενός αντικειμένου στη βασική κρυφή μνήμη",
   "bleeding_edge_build": "BLEEDINGEDGE",
+  "btr-unable_to_find_items_in_dialog_template": "Αδύνατη η εύρεση itemsDelivered (Παραδιδόμενων αντικειμένων) στον dialogueTemplates (Πρότυπα διαλόγου) για τον παίκτη: %s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "ΠΡΟΕΙΔΟΠΟΙΗΣΗ - Η Προσωρινή μνήμη Bot δεν έχει ένα προ-παραγόμενο bot του τύπου %s, θα πρέπει να δημιουργηθεί, ρυθμίστε την ιδιότητα ρύθμισης bot.json (presetBatch) ώστε να είναι πιο υψηλή",
   "bot-bot_preset_count_value_missing": "Αδυναμία εύρεσης προκαθορισμένου αριθμού για τη δημιουργία του bot: %s, επιστροφή ως προεπιλογή του 30",
   "bot-compatibility_check_missing_props": "Δεν είναι δυνατή η επικύρωση του αντικειμένου: {{id}} {{name}} στην υποδοχή: {{slot}} μπορεί να εξοπλιστεί, λείπει μία a _props τιμή",
@@ -56,6 +57,8 @@
   "bot-weapon_missing_mod_slot": "Η υποδοχή '{{modSlot}}' δεν υπάρχει για το όπλο: {{weaponId}} {{weaponName}} στο {{botRole}}",
   "bot-weapons_required_slot_missing_item": "Η απαιτούμενη υποδοχή '{{modSlot}}' στο {{modName}} {{slotId}} ήταν άδεια στο {{botRole}}",
   "build-unable_to_delete_preset": "Δεν είναι δυνατή η διαγραφή της προεπιλογής, δεν μπορεί να βρεθεί %s στο όπλο, στον εξοπλισμό ή στους προκαθορισμούς γεμιστήρων",
+  "cultistcircle-unable_to_find_stash_id": "Αδύνατη η εύρεση ταυτότητας αποθεματικού παίκτη για τον κύκλο clutist στον κατάλογο του πάικτη (inventory) [HideoutAreaStashes]! Δεν δημιουργήθηκαν ανταμοιβές",
+  "cultistcircle-no_matching_threshhold_found": "Αδύνατη η εύρεση αντίστοιχης τιμής του ορίου του κύκλου cultist που να αντιστοιχεί στο ποσό σε ρούβλια: ({{rewardAmountRoubles}}), χρήση της εφεδρικής λύσης του χρόνου δημιουργίας 12 ωρών",
   "chat-unable_to_register_command_already_registered": "Αδυναμία καταγραφής ήδη καταχωρημένης εντολής: %s",
   "client_request": "[Αίτημα Πελάτη] %s",
   "client_request_ip": "[Αίτημα Πελάτη] {{ip}} {{url}}",
@@ -79,6 +82,7 @@
   "fence-unable_to_find_assort_by_id": "Αδυναμία εύρεσης ταξινόμησης του fence για την ταυτότητα: %s",
   "fence-unable_to_find_offer_by_id": "Αδυναμία εύρεσης προσφοράς με την ταυτότητα: %s",
   "fence-unable_to_get_ammo_penetration_value": "Δε βρέθηκε καμία τιμή διείσδυσης για το Πυρομαχικό: %s, Αδυναμία ελέγχου αν βρίσκεται πάνω του ορίου διείσδυσης, υποθέτηση ως εσφαλμένο",
+  "fence-unable_to_find_root_item_to_add": "Δεν είναι δυνατή η προσθήκη αντικειμένων στον Fence καθώς δε βρέθηκαν στοιχεία root",
   "fixer-clothing_item_found": "To αντικείμενο ρουχισμού: %s που ευρέθηκε στο προφίλ δεν υπάρχει στο SPT. Θα ΑΝΤΙΜΕΤΩΠΙΣΕΤΕ σφάλματα, αυτό μπορεί να οφείλεται στη χρήση ενός πρόσθετου (mod) ρούχων και στην αφαίρεση του mod, με τον χαρακτήρα σας να το φοράει ακόμα. ΜΗΝ ΧΡΗΣΙΜΟΠΟΙΕΙΤΕ ΑΥΤΟ ΤΟ ΠΡΟΦΙΛ. Ανοίξτε το Aki_Data\\Server\\configs\\core.json, επεξεργαστείτε το 'removeModItemsFromProfile' ώστε να είναι αληθές (true). Αυτό θα επιτρέψει στον διακομιστή να επεξεργαστεί το προφίλ σας και ευελπιστούμε να αφαιρέσει τα ρούχα που λείπουν",
   "fixer-mod_item_found": "Το αντικείμενο: %s που βρέθηκε στο προφίλ δεν υπάρχει στα στοιχεία της βάσης δεδομένων. Θα ΑΝΤΙΜΕΤΩΠΙΣΕΤΕ σφάλματα, αυτά μπορεί να οφείλονται στη χρήση ενός πρόσθετου (mod) αντικειμένων και, με την αφαίρεση του πρόσθετου χωρίς την διαγραφή των τροποποιημένων αντικειμένων από το απόθεμα του παίκτη σας. ΜΗΝ ΧΡΗΣΙΜΟΠΟΙΗΣΕΤΕ ΑΥΤΟ ΤΟ ΠΡΟΦΙΛ. Ανοίξτε το Aki_Data\\Server\\configs\\core.json, επεξεργαστείτε το 'removeModItemsFromProfile' για να είναι αληθές (true). Αυτό θα επιτρέψει στο διακομιστή να επεξεργαστεί το προφίλ σας και να προσπαθήσει να αφαιρέσει τα κακά στοιχεία",
   "fixer-trader_found": "Ο έμπορος: %s βρέθηκε σε προφίλ που δεν υπάρχει στο SPT. Θα ΑΝΤΙΜΕΤΩΠΙΣΕΤΕ σφάλματα, αυτό μπορεί να οφείλεται στη χρήση ενός πρόσθετου (mod) εμπόρου και στην κατάργηση του mod χωρίς να διαγραφούν τα μηνύματα από τον εν λόγω έμπορο. ΜΗΝ ΧΡΗΣΙΜΟΠΟΙΕΙΤΕ ΑΥΤΟ ΤΟ ΠΡΟΦΙΛ. Ανοίξτε το Aki_Data\\Server\\configs\\core.json, επεξεργαστείτε το 'removeModItemsFromProfile' ώστε να είναι αληθές (true). Αυτό θα επιτρέψει στον διακομιστή να επεξεργαστεί το προφίλ σας και ευελπιστούμε να καταργήσει τα κακά μηνύματα",
@@ -92,6 +96,7 @@
   "hideout-missing_recipe_for_area": "Αδυναμία εύρεσης συνταγής: %s για τον τύπο περιοχής",
   "hideout-missing_recipe_in_db": "Αποτυχία εντοπισμού συνταγής με _id: %s",
   "hideout-no_bitcoins_to_collect": "Δεν υπάρχουν έτοιμα bitcoins προς παραλαβή",
+  "hideout-bitcoin_craft_missing": "Δε βρέθηκε το παράγωγο της φάρμας Bitcoin, δεν είναι δυνατή η ενημέρωση του δαπανούμενου χρόνου της παραγωγής νομίσματος",
   "hideout-unable_to_apply_stashsize_bonus_no_stash_found": "Δεν είναι δυνατή η εφαρμογή του μπόνους Stashsize, ο αποθηκευτικός χώρος του παίκτη με το id: %s δε βρέθηκε στο προφίλ",
   "hideout-unable_to_find_area": "Αδυναμία εύρεσης του χώρου κρησφύγετο: %s στο προφίλ",
   "hideout-unable_to_find_area_in_database": "Αδύνατη η εύρεση της περιοχής: %s στη βάση δεδομένων",
@@ -185,6 +190,8 @@
   "loot-default_preset_not_found_using_random": "Η προεπιλεγμένη προκαθορισμένη ρύθμιση για το όπλο: %s δε βρέθηκε, επιλογή αντί αυτού, ενός τυχαίου τύπου όπλου",
   "loot-item_missing_parentid": "Αντικείμενο: Το %s δεν έχει γονική τιμή, αδύνατη η χρήση του αντικειμένου ως λάφυρο",
   "loot-non_item_picked_as_sealed_weapon_crate_reward": "Μη έγκυρο όπλο: Το %s, επιλέχθηκε ως ανταμοιβή για το σφραγισμένο κιβώτιο όπλων, αδύνατη η δημιουργία λάφυρου",
+  "loot-preset_pool_is_empty": "Δεν είναι δυνατή η εύρεση τυχαίας προεπιλογής στον δεδομένο δειγματοχώρο καθώς είναι άδειος, παράλειψη",
+  "loot-chosen_preset_missing_encyclopedia_value": "Η επιλεγμένη προεπιλογή: %s στερείται εγκυκλοπαιδικής ιδιότητας, παράλειψη",
   "mail-unable_to_find_message_sender_by_id": "Αδύνατη η εύρεση email αποστολέα με την ταυτότητα: %s",
   "mail-unable_to_give_gift_not_handled": "Αδύνατη η χορήγηση δώρου παίκτη, η ανταμοιβή: %s δεν αντιμετωπίζεται από το διακομιστή",
   "mailsend-missing_npc_dialog": "Αδύνατη η αποστολή μηνύματος από: %s προς τον παίκτη. Στοιχείο διαλόγου γι 'αυτούς δεν υπάρχει",
@@ -199,11 +206,10 @@
   "modloader-error_parsing_mod_load_order": "Σφάλμα κατά την ανάλυση της σειράς φόρτωσης πρόσθετου (mod)",
   "modloader-incompatibilities_not_string_array": "Στο πρόσθετο %s package.json η ιδιότητα \"ασυμβατότητες\" θα πρέπει να είναι μία συστοιχία συμβολοσειρών",
   "modloader-incompatible_mod_found": "Το πρόσθετο {{author}}-{{name}} δεν είναι συμβατό με το {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Εγκατάσταση εξαρτήσεων για το πρόσθετο: {{name}} από: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Το πρόσθετο: {{name}} by: {{author}} απαιτεί εξωτερικές εξαρτήσεις, αλλά η λειτουργία αυτή τη στιγμή είναι απενεργοποιημένη, πήγαινε στο \"{{configPath}}\", όρισε \"{{configOption}}\" σε true και επανεκκίνησε τον διακομιστή.\nΕνεργοποιώντας αυτό αποδέχεστε όλη την ευθύνη για τις λήψεις {{name}} στον υπολογιστή σας.",
   "modloader-invalid_sptVersion_field": "Το πρόσθετο %s περιέχει μία μη έγκυρη semver συμβολοσειρά στο πεδίο sptVersion. Παραδείγματα έγκυρων τιμών: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "Το πρόσθετο %s package.json περιέχει μια μη έγκυρη έκδοση συμβολοσειράς",
   "modloader-is_client_mod": "Το πρόσθετο (%s) είναι ένα πρόσθετο πελάτη και θα πρέπει να τοποθετηθεί στον ακόλουθο φάκελο: /spt/bepinex/plugins",
+  "modloader-is-old-js-mod": "Το Mod (%s) είναι μια λειτουργία διακομιστή προ της έκδοσης 4.0.0. Παρακαλώ βρείτε την κατάλληλη έκδοση ή περιμένετε για μια ενημέρωση.",
   "modloader-load_order_conflict": "Τα `{{modOneName}}` και `{{modTwoName}}` έχουν αντικρουόμενες απαιτήσεις σειράς φόρτωσης, ο διακομιστής δεν μπορεί να ξεκινήσει μέχρι να αυτό διορθωθεί και θα τερματιστεί",
   "modloader-loaded_mod": "Πρόσθετο: {{name}} έκδοση: {{version}} από: {{author}} φορτώθηκε",
   "modloader-loading_mods": "ModLoader: φόρτωση πρόσθετων %s διακομιστή...",
@@ -596,14 +602,14 @@
   "quest-handover_wrong_item": "Αδύνατη η παράδοση του αντικειμένου για την αποστολή {{questId}}, αναμένεται tpl: {{requiredTpl}} αλλά παραδόθηκε σε: {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() Το αντικείμενο με _id: %s δε βρέθηκε στο απόθεμα",
   "quest-no_skill_found": "Η δεξιότητα %s δε βρέθηκε",
-  "quest-reward_type_not_handled": "Τύπος ανταμοιβής αποστολής: {{rewardType}} δεν αντιμετωπίζεται για την αποστολή: {{questId}} όνομα: {{questName}}",
   "quest-unable_to_find_compare_condition": "Μη Αναγνωρίσιμη Μέθοδος Σύγκρισης: %s",
-  "quest-unable_to_find_matching_hideout_production": "Αδύνατη η εύρεση αντιστοιχίας κατασκευής της κρυψώνας του παίκτη για την αποστολή: {{questName}}, βρέθηκαν αντιστοιχίες: {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "Η ταυτότητα αποστολής: {{questId}} με το τύπο: {{questType}} δε βρέθηκε στη βάση δεδομένων",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Αδύνατη η εύρεση της αποστολής: %s στη βάση δεδομένων (db), αδύνατη η απόδοση επιβράβευσης αποστολής στον παίκτη",
   "quest-unable_to_find_repeatable_to_replace": "Αδύνατη η εύρεση επαναληπτικής αποστολής στο προφίλ ώστε να αντικατασταθεί, παράβλεψη",
   "quest-unable_to_find_trader_in_profile": "Αδύνατη η εύρεση του εμπόρου: %s στο προφίλ",
   "quest-unable_to_remove_scav_quest_from_profile": "Αδύνατη η αφαίρεση της αποστολής scav: {{questIdToRemove}} από το προφίλ: {{profileId}}",
+  "quest-repeatable_generation_failed_please_report": "Αποτυχία δημιουργίας επαναλαμβανόμενου quest μετά από %s προσπάθειες. Αυτό δεν πρέπει ποτέ να συμβεί. Παρακαλώ αναφέρετε",
+  "quest-repeatable_elimination_generation_failed_please_report": "Αδυναμία γέννεσης επαναλαμβανόμενου quest Αποκλεισμού. Δε βρέθηκαν τοποθεσίες. Παρακαλώ αναφέρετε",
   "ragfair-invalid_player_offer_request": "Αδύνατη η τοποθέτηση προσφοράς, το αίτημα δεν είναι έγκυρο",
   "ragfair-item_not_in_db_unable_to_generate_dynamic_stack_count": "Το αντικείμενο με tpl: %s δε βρέθηκε στη βάση δεδομένων. Δεν είναι δυνατή η δημιουργία δυναμικού αριθμού στοιβών",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() Απέτυχε να βρει barterScheme για το αντικείμενο id: {{itemId}} tpl: {{tpl}} στο {{name}}",
@@ -628,6 +634,7 @@
   "ragfair-unable_to_remove_offer_doesnt_exist": "Δεν είναι δυνατή η αφαίρεση της προσφοράς με το αναγνωριστικό: %s καθώς δεν μπορεί να βρεθεί στο παζάρι",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Αδύνατη η εύρεση προσφοράς: {{offerId}} στο προφίλ: {{profileId}} καθώς η προσφορά είναι αόριστη, δημιουργία",
   "ragfair-generating_offers": "Γέννεση προσφορών παζαριού...",
+  "ragfair-offer_page_doesnt_exist": "Η τρέχουσα σελίδα flea δεν υπάρχει πλέον, εμφάνιση της λίστας λήξης προσφορών",
   "release-beta-disclaimer": "Πατώντας OK συμφωνείτε ότι δεν παρέχεται υποστήριξη και ότι αυτό είναι μόνο για δοκιμές σφαλμάτων. Αυτή ΔΕΝ είναι η τελική εμπειρία του παιχιδιού. Τα πρόσθετα (mods) είναι απενεργοποιημένα. Η δημιουργία νέων προφίλ μπορεί να απαιτείται πιο συχνά. Αναφέρετε όλα τα σφάλματα στο κανάλι αναφορών στο discord, ή στη σελίδα ζητημάτων στην ιστοσελίδα. Αν δεν πατήσετε OK μέχρι το προκαθορισμένο χρονικό διάστημα, το παιχνίδι θα κλείσει.",
   "release-beta-disclaimer-accept": "Ο χρήστης αποδέχθηκε τη δήλωση αποποίησης ευθύνης της εκδοχής beta",
   "release-beta-disclaimer-mods-enabled": "Πατώντας OK συμφωνείτε ότι δεν παρέχεται καμίας μορφής υποστήριξη και, ότι αυτό είναι μόνο για δοκιμές σφαλμάτων. Αυτή ΔΕΝ είναι η τελική εμπειρία του παιχιδιού. Τα πρόσθετα (mods) είναι απενεργοποιημένα, μην κάνετε αναφορά (report) για θέματα με πρόσθετα (mods). Αναφέρετε όλα τα σφάλματα στο κανάλι αναφορών στο discord, ή στη σελίδα ζητημάτων στην ιστοσελίδα. Αν δεν πατήσετε OK μέχρι το προκαθορισμένο χρονικό διάστημα, το παιχνίδι θα κλείσει.",
@@ -652,6 +659,8 @@
   "repeatable-quest_handover_failed_condition_invalid": "Σφάλμα παράδοσης αποστολής: δε βρέθηκε η συνθήκη ή έχει λανθασμένη τιμή. qid: {{body.qid}}, συνθήκη: {{body.conditionId}}",
   "repeatable-unable_to_accept_quest_see_log": "Αδύνατη η αποδοχή της αποστολής, δείτε το αρχείο καταγραφής του διακομιστή για λεπτομέρειες",
   "repeatable-unable_to_accept_quest_starting_message_not_found": "Αδύνατη η αποδοχή της αποστολής: {{questId}} δεν μπορεί να βρεθεί το μήνυμα εκκίνησης της αποτολής με ταυτότητα: {{messageId}}",
+  "reward-type_not_handled": "Ο τύπος ανταμοιβής: {{rewardType}} δε διαχειρίζεται για την αποστολή/επίτευγμα: {{questId}}",
+  "reward-unable_to_find_matching_hideout_production": "Αδύνατη η εύρεση ξεκλειδώματος αντίστοιχης κατασκευής κρυψώνας του παίκτη για την/το αποστολή/επίτευγμα: {{questId}}, βρέθηκαν αντιστοιχίες: {{matchCount}}",
   "route_onupdate_no_response": "onUpdate: Η διαδρομή %s δεν αναφέρει επιτυχία ή αποτυχία",
   "scav-missing_karma_level_getting_default": "Το getScavKarmaLevel() απέτυχε, αδυναμία εύρεσης του fence στο προφίλ.traderInfo. Επιστροφή στην προεπιλογή για το επίπεδο κάρμα 0",
   "scav-missing_karma_settings": "Αδυναμία λήψης ρυθμίσεων κάρμα για το επίπεδο %s",
@@ -687,8 +696,12 @@
   "server_start_meme_8": "είναι η morbin ώρα",
   "server_start_meme_9": "Αδερφέ scav; Μα τι κάνεις;",
   "server_start_player_active_botreload_skill": "Ο χαρακτήρας σας έχει την ικανότητα 'BotReload' ενεργή, αυτό θα προκαλέσει την επαναφόρτωση των όπλων σας με αφύσικα γρήγορο ρυθμό, αγνοήστε αυτό το μήνυμα αν αυτό είναι το επιθυμητό σας αποτέλεσμα",
-  "server_start_success": "Να έχετε ένα ευχάριστο παιχνίδι",
+  "server_start_success": "Ο διακομιστής έχει ξεκινήσει, να έχετε ένα χαρούμενο παιχνίδι",
   "started_webserver_success": "Ξεκίνησε ο διακομιστής ιστού στο %s",
+  "scavcase-no_cartridges_found_matching_price": "Αδύνατη η λήψη λίστας πυρομαχικών που ταιριάζουν με τα επιθυμητά κριτήρια για την επιβράβευση της θήκης scav (scav case)",
+  "weightedrandomhelper-supplied_items_empty": "Στο WeightedRandom() δόθηκαν 0 αντικείμενα, αδυναμία επιλογής ενός τυχαίου βάρους",
+  "weightedrandomhelper-supplied_weights_empty": "Στο WeightedRandom() δόθηκαν 0 βάρη, αδυναμία επιλογής ενός τυχαίου βάρους",
+  "weightedrandomhelper-supplied_data_doesnt_match": "Στο WeightedRandom() δόθηκαν {{itemCount}} αντικείμενα και {{weightCount}} βάρη, αδυναμία επιλογής ενός τυχαίου βάρους",
   "trader-missing_durability_threshold_value": "Αδύνατη η εύρεση τιμής ορίου ανθεκτικότητας για τον έμπορο: {{traderId}}, επιστροφή στην αρχική τιμή του: {{value}}",
   "trader-missing_repair_property_using_default": "Στον έμπορο {{traderId}} {{nickname}} λείπει ένα αντικείμενο επισκευής, προσθήκη των προεπιλεγμένων τιμών",
   "trader-missing_repair_quality_property_using_default": "Απ' τον έμπορο {{traderId}} {{nickname}} λείπει μια ιδιότητα ποιότητας επισκευής, προσθήκη μίας προεπιλεγμένης τιμής",
@@ -700,6 +713,9 @@
   "trader-unable_to_find_trader_by_id": "Αδύνατη η εύρεση εμπόρου με την ταυτότητα: %s",
   "trader-unable_to_find_trader_in_enum": "Αδύνατη η εύρεση εμπόρου: %s στην απαρίθμηση εμπόρων",
   "trader-unable_to_purchase_item_limit_reached": "Αδύνατη η αγορά του αντικειμένου από τον έμπορο: {{traderId}} καθώς το όριο συναλλαγών του: {{limit}} έχει συμπληρωθεί",
+  "trader-unable_to_find_selltotrader_counter": "Αδύνατη η εύρεση [sellToTrader] μέτρησης για: %s αποστολής στην db, η μέτρηση δε θα προσαυξηθεί",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "Αδύνατη η εύρεση αντικειμένου αποθέματος παίκτη: %s για πώληση, αδύνατη η προσαύξηση μέτρησης, παράλειψη",
+  "trader-unable_to_add_custom_trader": "Αδύνατη η προσθήκη αποκλειστικού εμπόρου: {{traderId}}, {{stackTrace}}",
   "unhandled_response": "[ΜΗ ΔΙΑΧΕΙΡΙΣΙΜΟ][%s]",
   "unknown_request": "Άγνωστο αίτημα!",
   "validation_error_decode": "Αδύνατη η αποκωδικοποίηση checks.dat. Η επικύρωση αρχείου παραλείφθηκε.",
@@ -710,7 +726,7 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "ΜΗΝ ΤΟ ΑΝΑΦΕΡΕΤΕ",
   "watermark-free_of_charge": "Αυτή η εργασία είναι χωρίς χρέωση",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
+  "watermark-issue_tracker_url": "https://github.com/sp-tarkov/server/",
   "watermark-modding_disabled": "ΑΥΤΗ Η ΕΚΔΟΣΗ ΕΧΕΙ ΑΠΕΝΕΡΓΟΠΟΙΗΜΈΝΕΣ ΤΙΣ ΤΡΟΠΟΠΟΙΗΣΕΙΣ ΑΠΟ ΤΟΝ ΔΙΑΚΟΜΙΣΤΗ",
   "watermark-no_support": "ΔΕΝ ΘΑ ΔΩΘΕΙ ΥΠΟΣΤΗΡΙΞΗ",
   "watermark-not_an_issue": "ΑΥΤΟ ΔΕΝ ΕΙΝΑΙ ΠΡΟΒΛΗΜΑ",
@@ -722,7 +738,8 @@
   "websocket-message_sent": "[WS] μήνυμα εστάλη",
   "websocket-not_ready_message_not_sent": "[WS] Η υποδοχή δεν είναι έτοιμη για %s, το μήνυμα δεν εστάλη",
   "websocket-pinging_player": "[WS] Έλεγχος διαθεσιμότητας παίκτη: %s",
-  "websocket-player_connected": "[WS] Παίκτης: Το {{sessionId}} {{contextId}} έχει συνδεθεί",
+  "websocket-player_connected": "[WS] ο Παίτης: {{sessionId}} {{contextId}} έχει συνδεθεί",
+  "websocket-player_reconnect": "[WS] Ο Παίκτης: {{sessionId}} {{contextId}} λήψη επανασύνδεσης, κλείσιμο προηγούμενης ενεργής θύρας",
   "websocket-received_message": "[WS] Ελήφθη μήνυμα από τον χρήστη %s ",
   "websocket-socket_lost_deleting_handle": "[WS] Απώλεια υποδοχής, διαγραφή λαβής",
   "websocket-started": "Ξεκίνησε ο διακομιστής ιστού στο %s",
@@ -730,5 +747,7 @@
   "chatbot-forced_event_enabled": "Το %s event έχει ενεργοποιηθεί, επανεκκινήστε τον πελάτη του παιχνιδιού σας προτού ξεκινήστε ένα raid",
   "chatbot-added_stash_rows_please_restart": "Προστέθηκαν 2 σειρές στο stash, παρακαλώ επανεκκινήστε το παιχνίδι σας για να τις δείτε",
   "chatbot-snow_enabled": "Το χιόνι είναι ενεργοποιημένο για όλα τα επόμενα raids μέχρι να γίνει επανεκκίνηση του διακομιστή",
-  "chatbot-summer_enabled": "Το καλοκαίρι έχει ενεργοποιηθεί για όλες τα επόμενα raids μέχρι να γίνει επανεκκίνηση του διακομιστή"
+  "chatbot-summer_enabled": "Το καλοκαίρι έχει ενεργοποιηθεί για όλες τα επόμενα raids μέχρι να γίνει επανεκκίνηση του διακομιστή",
+  "chatbot-command_was_empty": "Η εντολή που πληκτρολογήσατε ήταν κενή, αδύνατη η επεξεργασία",
+  "webserver_already_running": "Ένα άλλο αντίγραφο του διακομιστή ιστού βρίσκεται ήδη σε λειτουργία. Παρακαλούμε κλείστε το πριν ξεκινήσετε ένα καινούριο."
 }
