--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/fr.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/fr.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "L'élément %s n'a toujours pas été trouvé dans le cache de base après la régénération",
   "baseclass-missing_db_no_cache": "Base de données vide, impossible de générer un item base cache",
   "bleeding_edge_build": "BLEEDINGEDGE",
+  "btr-unable_to_find_items_in_dialog_template": "Impossible de trouver itemsDelivered dans dialogueTemplates pour joueur : %s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "ATTENTION - Le cache des Bots ne contient pas un bot pré-généré de type %s, il devra être généré, configurez la propriété (presetBatch) dans la configuration bot.json afin qu'elle soit plus élevée",
   "bot-bot_preset_count_value_missing": "Impossible de trouver un preset de nombres à générer pour le bot: %s, par défaut à 30",
   "bot-compatibility_check_missing_props": "Impossible de valider l'objet : {{id}} {{name}} dans l'emplacement {{slot}} peut être équipé, une valeur _props est manquante",
@@ -56,6 +57,8 @@
   "bot-weapon_missing_mod_slot": "Emplacement : {{modSlot}}' n'existe pas pour l'arme : {{weaponId}} {{weaponName}} sur {{botRole}}",
   "bot-weapons_required_slot_missing_item": "L'emplacement requis '{{modSlot}}' sur {{modName}} {{slotId}} était vide sur {{botRole}}",
   "build-unable_to_delete_preset": "Impossible de supprimer le preset, impossible de trouver %s dans les presets d'arme, d'équipement ou de chargeur",
+  "cultistcircle-unable_to_find_stash_id": "Impossible de trouver stash id pour Cercle des Fanatiques dans inventaire [HideoutAreaStashes]! Aucune récompense n'a été générée",
+  "cultistcircle-no_matching_threshhold_found": "Impossible de trouver valeur de seuil correspondante au montant de rouble ({{rewardAmountRoubles}}) pour le Cercle des Fanatiques, craft de 12 heures utilisé en tant que solution de secours",
   "chat-unable_to_register_command_already_registered": "Impossible d'inscrire la commande déjà inscrite : %s",
   "client_request": "[Requête Client] %s",
   "client_request_ip": "[Requête Client] {{ip}} {{url}}",
@@ -79,6 +82,7 @@
   "fence-unable_to_find_assort_by_id": "Impossible de trouver l'assort de Fence pour l'id : %s",
   "fence-unable_to_find_offer_by_id": "Impossible de trouver l'offre avec l'id: %s",
   "fence-unable_to_get_ammo_penetration_value": "Aucune valeur de pénétration trouvée pour la munition: %s, impossible de vérifier si elle est supérieure à la limite de pénétration, faux par défaut",
+  "fence-unable_to_find_root_item_to_add": "Impossible d'ajouter des objets dans l'inventaire de Fence car aucun objet source n'a été trouvé",
   "fixer-clothing_item_found": "Vêtement: %s a été trouvé dans le profil mais n'existe pas dans SPT. Vous rencontrerez des erreurs, qui peuvent être dues au fait d'utiliser un mod de vêtement que vous ayez supprimer alors que votre personnage le portait toujours. N'UTILISEZ PAS CE PROFIL. Ouvrez SPT_Data\\Server\\configs\\core.json, éditez 'removeModItemsFromProfile' à la valeur true. Cela permettra au serveur d'éditer votre profil, dans le but de supprimer le vêtement manquant",
   "fixer-mod_item_found": "Objet: %s a été trouvé dans le profil mais n'existe pas dans la base de données. Cela VA produire des erreurs, ce type d'erreur peut survenir si vous utilisez un mod rajoutant des objets et que vous supprimez ce mod sans supprimer les items moddés de votre inventaire. N'UTILISEZ PAS CE PROFIL. Ouvrez SPT_Data\\Server\\configs\\core.json, éditez 'removeModItemsFromProfile' à la valeur true. Cela permettra au serveur d'éditer votre profil, dans le but de supprimer ces objets",
   "fixer-trader_found": "Trader: %s a été trouvé dans le profil mais n'existe pas dans SPT. Cela VA produire des erreurs, ce type d'erreur peut survenir si vous utilisez un mod de trader et que vous supprimez ce mod sans supprimer les messages de ce trader. N'UTILISEZ PAS CE PROFIL. Ouvrez SPT_Data\\Server\\configs\\core.json, éditez 'removeModItemsFromProfile' à la valeur true. Cela permettra au serveur d'éditer votre profil, dans le but de supprimer les messages",
@@ -92,6 +96,7 @@
   "hideout-missing_recipe_for_area": "Impossible de trouver la recette : %s pour le type de zone",
   "hideout-missing_recipe_in_db": "Impossible de localiser la recette avec l'_id : %s",
   "hideout-no_bitcoins_to_collect": "Aucun bitcoin n'a été généré pour le moment",
+  "hideout-bitcoin_craft_missing": "Le craft de la ferme Bitcoin n'a pas été trouvé, impossible de mettre à jour le temps passé à fabriquer",
   "hideout-unable_to_apply_stashsize_bonus_no_stash_found": "Impossible d'appliquer le bonus StashSize, réserve avec id : %s introuvable dans le profil",
   "hideout-unable_to_find_area": "Impossible de trouver l'emplacement de la planque : %s dans le profil",
   "hideout-unable_to_find_area_in_database": "Impossible de trouver la zone : %s dans la base de données",
@@ -185,6 +190,8 @@
   "loot-default_preset_not_found_using_random": "Le preset pour l'arme: %s est introuvable, une arme aléatoire du même type a été choisie à la place",
   "loot-item_missing_parentid": "Objet : %s n'a pas de valeur parentId, impossible d'utiliser l'item comme butin",
   "loot-non_item_picked_as_sealed_weapon_crate_reward": "Arme invalide : %s a été choisie comme récompense pour la mallette d'armes scellée, impossible de créer le butin",
+  "loot-preset_pool_is_empty": "Impossible de trouver le preset aléatoire dans la séléction donnée car elle est vide, ignorée",
+  "loot-chosen_preset_missing_encyclopedia_value": "Preset choisi: %s n'a pas de propriété encyclopedia, ignoré",
   "mail-unable_to_find_message_sender_by_id": "Impossible de trouver expéditeur de mails avec id : %s",
   "mail-unable_to_give_gift_not_handled": "Impossible de donner le cadeau au joueur, la récompense: %s n'est pas gérée par le serveur",
   "mailsend-missing_npc_dialog": "Impossible d'envoyer un message depuis : %s au joueur. Un objet Dialog n'existe pas pour eux",
@@ -199,11 +206,10 @@
   "modloader-error_parsing_mod_load_order": "SPT-AKI n'a pas réussi à déterminer l'ordre correct des mods",
   "modloader-incompatibilities_not_string_array": "la propriété 'incompatibilities' dans le fichier package.json  du mod %s  doit être un tableau de chaînes de caractères",
   "modloader-incompatible_mod_found": "Le mod {{author}}-{{name}} est incompatible avec {{incompatibleModName}}",
-  "modloader-installing_external_dependencies": "Installation des dépendances pour le Mod: {{name}} par: {{author}}",
-  "modloader-installing_external_dependencies_disabled": "Mod: {{name}} de: {{author}} nécessite des dépendances externes mais cette fonction est actuellement désactivée, allez dans \"{{configPath}}\", changez l'option \"{{configOption}}\" à vrais et relancez le serveur.\nEn activant cette option, vous endossez toute la responsabilité de ce que {{name}} télécharge sur votre machine.",
   "modloader-invalid_sptVersion_field": "Le mod %s contient une chaîne de caractères semver invalide dans le champ sptVersion. Exemples de chaînes correctes: https://github.com/npm/node-semver#versions",
   "modloader-invalid_version_property": "Le mod %s package.json contient une chaîne de version invalide",
   "modloader-is_client_mod": "Le mod (%s) est un mod client et doit être placé dans le dossier suivant : /spt/bepinex/plugins",
+  "modloader-is-old-js-mod": "Mod (%s) est un mod server pour versions antérieures à 4.0.0. Trouvez une version appropriée ou attendez que le mod soit à jour.",
   "modloader-load_order_conflict": "`{{modOneName}}` et `{{modTwoName}}` ont des ordres de chargement en conflit, le serveur ne peut pas démarrer tant que ceci n'est pas corrigé et s'arrêtera",
   "modloader-loaded_mod": "Mod : {{name}} version : {{version}} par : {{author}} est chargé",
   "modloader-loading_mods": "ModLoader: Chargement des mods du serveur %s...",
@@ -596,14 +602,14 @@
   "quest-handover_wrong_item": "Impossible de donner l'objet de quête {{questId}}, objet prévu tpl: {{requiredTpl}} objet donné à la place : {{handedInTpl}}",
   "quest-item_not_found_in_inventory": "changeItemStack() L'item avec l'ID _id: %s est introuvable dans l'inventaire",
   "quest-no_skill_found": "Compétence %s non trouvée",
-  "quest-reward_type_not_handled": "Type de récompense de quête: {{rewardType}} non compatible pour la quête: {{questId}} nommée: {{questName}}",
   "quest-unable_to_find_compare_condition": "Méthode de comparaison non reconnue : %s",
-  "quest-unable_to_find_matching_hideout_production": "Impossible de trouver la recette de fabrication de l'hideout associée à la quête : {{questName}}, résultats trouvés : {{matchCount}}",
   "quest-unable_to_find_quest_in_db": "L'identifiant de quête: {{questId}} avec le type: {{questType}} introuvable dans la base de données",
   "quest-unable_to_find_quest_in_db_no_quest_rewards": "Impossible de trouver la quête: %s dans la base de données, impossible de donner les récompenses de quête au joueur",
   "quest-unable_to_find_repeatable_to_replace": "Impossible de trouver quête répétable à remplacer dans le profil, ignorée",
   "quest-unable_to_find_trader_in_profile": "Impossible de trouver le trader: %s dans le profil",
   "quest-unable_to_remove_scav_quest_from_profile": "Impossible d'éliminer quête Scav : {{questIdToRemove}} dans profil : {{profileId}}",
+  "quest-repeatable_generation_failed_please_report": "La quête répétable n'a pas pu être générée après %s tentatives. Cela ne devrait jamais arriver, veuillez envoyer un rapport SVP",
+  "quest-repeatable_elimination_generation_failed_please_report": "Impossible de générer une quête répétable d'élimination. Pas de lieux trouvés. Envoyez un rapport SVP",
   "ragfair-invalid_player_offer_request": "Impossible de placer une offre, la requête est invalide",
   "ragfair-item_not_in_db_unable_to_generate_dynamic_stack_count": "Objet avec tpl : %s introuvable dans la base de données. Impossible de générer un nombre d'objets pour le stack dynamiquement",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() impossible de trouver barterScheme pour l'objet id: {{itemId}} tpl: {{tpl}} sur {{name}}",
@@ -628,6 +634,7 @@
   "ragfair-unable_to_remove_offer_doesnt_exist": "Impossible de retirer l'offre avec l'id : %s car elle ne peut être trouvée sur le marché aux puces",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Impossible de trouver l'offre : {{offerId}} dans le profil : {{profileId}} puisque les offres sont indéfinies, en création",
   "ragfair-generating_offers": "Génération des offres du marché aux puces...",
+  "ragfair-offer_page_doesnt_exist": "La page actuelle du marché aux puces n'existe plus, la fin de la liste d'offre sera affichée",
   "release-beta-disclaimer": "En appuyant sur OK vous acceptez qu'aucune aide ne sera fournie et que cette version est uniquement prévue pour du débogage. PAS pour actuellement jouer. Les mods sont desactivés. Créer un nouveau profil peut être souvent nécessaire. Signalez tous les bugs dans le channel discord adéquat ou sur les pages dédiées du site web. Si vous ne pressez pas OK dans le temps imparti, le jeu se fermera.",
   "release-beta-disclaimer-accept": "Utilisateur a accepté l'avertissement de beta",
   "release-beta-disclaimer-mods-enabled": "En appuyant sur OK vous acceptez qu'aucune aide ne sera fournie et que cette version est uniquement prévue pour du débogage. PAS pour actuellement jouer. Les mods sont activés, ne PAS signaler de bug de mod. Ne PAS demander aux auteurs de mods de mettre à jour leur mods. Signalez tous les bugs dans le channel discord adéquat ou sur les pages dédiées du site web. Si vous ne pressez pas OK dans le temps imparti, le jeu se fermera.",
@@ -652,6 +659,8 @@
   "repeatable-quest_handover_failed_condition_invalid": "Erreur de transmission de quête : condition introuvable ou valeur incorrecte. qid : {{body.qid}}, condition : {{body.conditionId}}",
   "repeatable-unable_to_accept_quest_see_log": "Impossible d'accepter la quête, plus de détail dans le serveur log",
   "repeatable-unable_to_accept_quest_starting_message_not_found": "Impossible d'acepter la quête: {{questId}} le message de démarrage de quête est introuvable. Son ID id: {{messageId}}",
+  "reward-type_not_handled": "Type de récompense: {{rewardType}} non géré pour la quête/succès: {{questId}}",
+  "reward-unable_to_find_matching_hideout_production": "Impossible de trouver une recette correspondante de craft à débloquer dans la planque pour la quête/succès {{questId}}, correspondances trouvées: {{matchCount}}",
   "route_onupdate_no_response": "onUpdate: %s route ne reporte pas succès ou échec",
   "scav-missing_karma_level_getting_default": "getScavKarmaLevel() a échoué, impossible de trouver Fence dans profile.traderInfo. Remise à défaut du karma à valeur 0",
   "scav-missing_karma_settings": "Impossible de trouver les valeur du karma pour le level %s",
@@ -687,8 +696,12 @@
   "server_start_meme_8": "C'est le Morning Live ! De 7h à 9h ! L'émission qui réveille tes ? VOISINS !",
   "server_start_meme_9": "Bonjour ami scav? Heu tu fais quoi là ?",
   "server_start_player_active_botreload_skill": "Attention, votre PMC a le 'BotReload' skill actif, cela permet à votre arme de recharger hyper vite, ignorez ce message si c'est volontaire",
-  "server_start_success": "Bon jeu",
+  "server_start_success": "Le serveur a démarré. Bonne partie!",
   "started_webserver_success": "webserver demarré sur %s",
+  "scavcase-no_cartridges_found_matching_price": "Impossible d'obtenir une liste de munitions qui correspondent aux critères désirés pour la récompense de la caisse aux scavs",
+  "weightedrandomhelper-supplied_items_empty": "WeightedRandom() a reçu 0 objets dans son instruction, impossible de choisir une pondération aléatoire",
+  "weightedrandomhelper-supplied_weights_empty": "WeightedRandom() a reçu 0 pondérations dans son instruction, impossible de choisir une pondération aléatoire",
+  "weightedrandomhelper-supplied_data_doesnt_match": "WeightedRandom() a reçu {{itemCount}} objets et {{weightCount}} pondérations dans son instruction, impossible de choisir une pondération aléatoire",
   "trader-missing_durability_threshold_value": "Impossible de trouver le seuil de durabilité pour le trader: {{traderId}}, retour sur valeur défaut: {{value}}",
   "trader-missing_repair_property_using_default": "Il manque un objet de réparation pour le Trader: {{traderId}} {{nickname}}, ajout de la valeur par défaut",
   "trader-missing_repair_quality_property_using_default": "Il manque une propriété de qualité de réparation pour le Trader: {{traderId}} {{nickname}}, ajout de la valeur par défaut",
@@ -700,6 +713,9 @@
   "trader-unable_to_find_trader_by_id": "Impossible de trouver le trader avec l'identifiant: %s",
   "trader-unable_to_find_trader_in_enum": "Impossible de trouver le trader: %s dans les Traders enum",
   "trader-unable_to_purchase_item_limit_reached": "Impossible d'acheter objet auprès du marchand : {{traderId}} car leur limite d'achat de : {{limit}} a été atteinte",
+  "trader-unable_to_find_selltotrader_counter": "Impossible de trouver le compteur [sellToTrader] pour : %s quêtes dans la base de données, le compteur ne sera pas incrémenté",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "Impossible de trouver objet dans l'inventaire: %s pour le vendre, impossible d'augmenter le compteur, ignoré",
+  "trader-unable_to_add_custom_trader": "Impossible d'ajouter vendeur personalisé: {{traderId}}, {{stackTrace}}",
   "unhandled_response": "[INCONNU][%s]",
   "unknown_request": "requête inconnue !",
   "validation_error_decode": "Lecture impossible de checks.dat. La validation de fichiers est donc ignorée.",
@@ -710,7 +726,7 @@
   "watermark-discord_url": "https://discord.sp-tarkov.com",
   "watermark-do_not_report": "NE PAS SIGNALER !",
   "watermark-free_of_charge": "Ce travail est gratuit",
-  "watermark-issue_tracker_url": "https://dev.sp-tarkov.com/SPT/Server/issues",
+  "watermark-issue_tracker_url": "https://github.com/sp-tarkov/server/",
   "watermark-modding_disabled": "CE BUILD A LE MODDING DESACTIVE",
   "watermark-no_support": "AUCUN SUPPORT NE SERA FOURNI",
   "watermark-not_an_issue": "CECI N'EST PAS UNE ERREUR",
@@ -722,7 +738,8 @@
   "websocket-message_sent": "[WS] message envoyé",
   "websocket-not_ready_message_not_sent": "[WS] Socket pas prêt pour %s, message non envoyé",
   "websocket-pinging_player": "[WS] Pinging joueur: %s",
-  "websocket-player_connected": "[WS] joueur: {{sessionId}} {{contextId}} est connecté",
+  "websocket-player_connected": "[WS] Joueur : {{sessionId}} {{contextId}} s'est connecté",
+  "websocket-player_reconnect": "[WS] Joueur : {{sessionId}} {{contextId}} Reconnexion reçue, fermeture du socket actif précédent",
   "websocket-received_message": "[WS]  message reçu du l'utilisateur %s ",
   "websocket-socket_lost_deleting_handle": "[WS] Socket perdu, suppression du handle",
   "websocket-started": "Démarrage du websocket sur %s",
@@ -730,5 +747,7 @@
   "chatbot-forced_event_enabled": "L'événement %s a été activé, redémarrez votre client de jeu avant de commencer un raid",
   "chatbot-added_stash_rows_please_restart": "2 rangées ont été ajoutées à votre réserve, redémarrez le jeu pour les voir",
   "chatbot-snow_enabled": "La neige a été activée pour tous les raids suivants jusqu'à ce que le serveur soit redémarré",
-  "chatbot-summer_enabled": "L'été a été activé pour tous les raids suivants jusqu'à ce que le serveur soit redémarré"
+  "chatbot-summer_enabled": "L'été a été activé pour tous les raids suivants jusqu'à ce que le serveur soit redémarré",
+  "chatbot-command_was_empty": "Votre commande saisie est vide, impossible de traiter",
+  "webserver_already_running": "Une autre copie du serveur web est déjà en cours d'exécution. Veuillez l'arrêter avant d'en démarrer un nouveau."
 }
